--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-4 [賴清德「過境外交」：對中美釋放什麼訊號？](/articles/dw/1023515.md)
+
+12-4 [德国职业培训有口皆碑 你想试试吗？](/articles/dw/1023516.md)
+
 12-4 [韩国国会表决通过解除紧急戒严](/articles/dw/1023517.md)
 
 12-4 [韩国国会表决通过关于要求解除紧急戒严决议案](/articles/dw/1023518.md)
@@ -596,8 +600,4 @@
 11-2 [美国华盛顿州动用国民警卫队预防大选骚乱](/articles/dw/1023813.md)
 
 11-2 [联合国教科文组织：记者遇害事件激增](/articles/dw/1023814.md)
-
-11-2 [关于朝鲜派兵赴俄 这些你不得不知](/articles/dw/1023815.md)
-
-11-2 [“兄弟情谊”不断升温 欧尔班准备开香槟贺特朗普胜选](/articles/dw/1023816.md)
 
