--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-4 [中国黑客袭击事件后，美国政府与澳加新联合发布加强网络安全指南](/articles/voa/1010582.md)
+
+12-4 [西方推动向乌克兰提供更多军援，而非北约入盟邀请](/articles/voa/1010583.md)
+
+12-4 [获拜登总统全面赦免后,亨特·拜登枪支案被法官撤销](/articles/voa/1010584.md)
+
+12-4 [拜登抵达安哥拉，对非洲进行就任总统后的首访](/articles/voa/1010585.md)
+
 12-4 [短命的戒严：韩国到底发生了什么？](/articles/voa/1010586.md)
 
 12-4 [南中国海对峙升级之际 亲中假新闻席卷菲律宾](/articles/voa/1010587.md)
@@ -592,12 +600,4 @@
 11-21 [芬兰对海底电缆断裂事件启动刑事调查，据报一艘中国货轮为关注目标](/articles/voa/1010880.md)
 
 11-21 [中国提议组建中缅联合安保公司在缅甸引发争议](/articles/voa/1010881.md)
-
-11-21 [人民币贬值对中国决策者构成挑战](/articles/voa/1010882.md)
-
-11-21 [五角大楼：一些美国武器可能会在拜登任期结束后送抵乌克兰](/articles/voa/1010883.md)
-
-11-21 [美国否决联合国安理会最新的加沙停火决议](/articles/voa/1010884.md)
-
-11-21 [候任欧盟外长卡拉斯将如何对付中美俄？](/articles/voa/1010885.md)
 
