--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-4 [尹锡悦戒严令震惊全国，韩国政治两极化何以至此](/articles/nyt/1042147.md)
+
 12-4 [韩国总统颁布戒严令五小时后宣布解除，发生了什么？](/articles/nyt/1042148.md)
 
 12-3 [拜登出访安哥拉，推广铁路项目对抗中国影响力](/articles/nyt/1042149.md)
@@ -598,6 +600,4 @@
 8-26 [为什么欧洲人如此关注美国大选](/articles/nyt/1042445.md)
 
 8-26 [Telegram创始人在法国被捕，引发互联网言论自由之争](/articles/nyt/1042446.md)
-
-8-26 [若中国入侵怎么办？台剧《零日攻击》引发激烈争论](/articles/nyt/1042447.md)
 
