--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-4 [中国禁止对美出口关键稀有矿物质](/articles/nyt/1042146.md)
+
 12-4 [尹锡悦戒严令震惊全国，韩国政治两极化何以至此](/articles/nyt/1042147.md)
 
 12-4 [韩国总统颁布戒严令五小时后宣布解除，发生了什么？](/articles/nyt/1042148.md)
@@ -598,6 +600,4 @@
 8-26 [7-Eleven面临收购要约，买下日本“国宝”级便利店有多难](/articles/nyt/1042444.md)
 
 8-26 [为什么欧洲人如此关注美国大选](/articles/nyt/1042445.md)
-
-8-26 [Telegram创始人在法国被捕，引发互联网言论自由之争](/articles/nyt/1042446.md)
 
