--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-4 [紧急戒严引发政治危机 韩国总统尹锡悦被敦促下台或面临弹劾](/articles/voa/1010575.md)
+
 12-4 [菲律宾海警:中国在斯卡伯勒浅滩附近采取“咄咄逼人的行动”](/articles/voa/1010576.md)
 
 12-4 [拜登卸任前重拳出击中国AI软肋 特朗普对中国的科技封控或更强硬](/articles/voa/1010577.md)
@@ -598,6 +600,4 @@
 11-21 [路透：华为预计2025年Q1大规模生产新一代AI芯片](/articles/voa/1010873.md)
 
 11-21 [中国政府顾问呼吁将2025年经济增长目标维持5%不变](/articles/voa/1010874.md)
-
-11-21 [特朗普提名的商务部长与中国的商业关系引发争议](/articles/voa/1010875.md)
 
