--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-4 [从爱国侨领到美国间谍：中美换囚主角之一梁成运](/articles/nyt/1042145.md)
+
 12-4 [中国禁止对美出口关键稀有矿物质](/articles/nyt/1042146.md)
 
 12-4 [尹锡悦戒严令震惊全国，韩国政治两极化何以至此](/articles/nyt/1042147.md)
@@ -598,6 +600,4 @@
 8-27 [中国军机首次侵入日本领空，自卫队战斗机发出警告](/articles/nyt/1042443.md)
 
 8-26 [7-Eleven面临收购要约，买下日本“国宝”级便利店有多难](/articles/nyt/1042444.md)
-
-8-26 [为什么欧洲人如此关注美国大选](/articles/nyt/1042445.md)
 
