--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-4 [“世界正陷入火海” 联合国寻求为2025年筹集470亿美元的人道援助](/articles/voa/1010570.md)
+
+12-4 [台海局势紧张之际 上海副市长将访台出席论坛](/articles/voa/1010571.md)
+
 12-4 [中菲船只再次爆发水炮与侧撞冲突 两国相互指责](/articles/voa/1010572.md)
 
 12-4 [戒严令冲击韩股收跌1.4% 亚股普遍下跌](/articles/voa/1010573.md)
@@ -596,8 +600,4 @@
 11-21 [美特遣队支持菲军在南中国海行动，应对中国咄咄逼人势态](/articles/voa/1010868.md)
 
 11-21 [应对特朗普关税战，中国推出强化对外贸易政策措施](/articles/voa/1010869.md)
-
-11-21 [高校毕业生要“抢大姨大妈的家政市场”? 网民大叹文凭贬值](/articles/voa/1010870.md)
-
-11-21 [侵乌以来首次，俄军向乌克兰境内发射洲际弹道导弹](/articles/voa/1010871.md)
 
