--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-4 [基本常识｜不买你芯片和不卖你芯片，哪个更有威慑力？](/articles/cdt/334889.md)
+
+12-4 [六神磊磊读金庸｜吴柳芳的幸运，是在2024年擦边](/articles/cdt/334891.md)
+
+12-4 [木白文笔平平｜无知者嘲笑韩国军人不敢对民众开枪，太low了](/articles/cdt/334898.md)
+
 12-4 [每日一语 2024.12.3](/articles/cdt/334900.md)
 
 12-4 [劳务宏观笔记｜三年是多久？](/articles/cdt/334905.md)
@@ -594,10 +600,4 @@
 10-27 [【立此存照】上海市中山公园｜闭园公告](/articles/cdt/336036.md)
 
 10-27 [追月数星的朋友圈｜12岁女童被轮奸引爆网络后，领导下跪“求饶”，如今孩子抑郁自杀却不管不问](/articles/cdt/336038.md)
-
-10-26 [一个生物狗的科普小园｜虽说人死为大，但我真不喜欢全网美化自杀](/articles/cdt/336040.md)
-
-10-27 [【404文库】廖信忠｜今日巨鹿路City Walk](/articles/cdt/336042.md)
-
-10-26 [【CDTV】【图说天朝】2023万圣节被诊断为新的错误记忆？](/articles/cdt/336066.md)
 
