--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-4 [在华德企调查：做生意难，但不撤出中国](/articles/dw/1023505.md)
+
 12-4 [韩国解除戒严 各国反应不一](/articles/dw/1023506.md)
 
 12-4 [客座评论：尹锡悦的戒严令与脆弱的民主](/articles/dw/1023507.md)
@@ -598,6 +600,4 @@
 11-4 [客座评论：互信程度低 导致“谍谍不休”](/articles/dw/1023803.md)
 
 11-4 [中法高官会晤 北京盼法推动欧盟转变关税立场](/articles/dw/1023804.md)
-
-11-4 [美国总统大选进入倒计时 两党候选人都在忙什么？](/articles/dw/1023805.md)
 
