--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-5 [尹锡悦误判权力引发动荡  韩国经济及国际地位受冲击](/articles/dw/1023500.md)
+
+12-5 [尹锡悦误判权力引发政治动荡  韩国经济及国际地位遭受冲击](/articles/dw/1023501.md)
+
 12-5 [尼泊尔宣布与中国签署一带一路合作框架协议](/articles/dw/1023502.md)
 
 12-4 [菲律宾海事法争议扩大 马来西亚提抗议](/articles/dw/1023503.md)
@@ -596,8 +600,4 @@
 11-5 [35年前的东柏林：最大示威游行奏响东德挽歌](/articles/dw/1023798.md)
 
 11-4 [缅甸军政府领导人敏昂莱本周将访问中国](/articles/dw/1023799.md)
-
-11-4 [奥巴马、特朗普、拜登：美国经济真的在乎谁当总统吗？](/articles/dw/1023800.md)
-
-11-4 [事实核查：马斯克如何尝试影响美国大选](/articles/dw/1023801.md)
 
