--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-5 [特朗普提名纳瓦罗出任贸易与制造业高级顾问](/articles/voa/1010562.md)
+
+12-5 [美国在台协会处长谷立言：中国是台湾与国际互联互通的最大挑战](/articles/voa/1010563.md)
+
 12-5 [底气不足，中共党媒开始为经济增长不能达标营造舆论](/articles/voa/1010564.md)
 
 12-5 [英国港人集会被掷饮料 英警方指证据不足 不检控华裔袭击者](/articles/voa/1010565.md)
@@ -596,8 +600,4 @@
 11-22 [中国“假留学生”在澳大利亚谋职面临打击](/articles/voa/1010860.md)
 
 11-22 [盖茨退出特朗普的司法部长提名](/articles/voa/1010861.md)
-
-11-22 [涉电缆断裂事件，丹麦就中国货轮事宜进行外交会谈](/articles/voa/1010862.md)
-
-11-22 [分析：香港民主派初选案判刑影响“一国两制”国际形象](/articles/voa/1010863.md)
 
