--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-5 [华语世界言情小说作家琼瑶以自我方式“翩然”走完多彩的一生](/articles/voa/1010560.md)
+
+12-5 [韩国“闪电”戒严或给东亚地缘政治和安全留下长期的阴影？](/articles/voa/1010561.md)
+
 12-5 [特朗普提名纳瓦罗出任贸易与制造业高级顾问](/articles/voa/1010562.md)
 
 12-5 [美国在台协会处长谷立言：中国是台湾与国际互联互通的最大挑战](/articles/voa/1010563.md)
@@ -596,8 +600,4 @@
 11-22 [国际原子能机构通过决议谴责伊朗不合作,中俄投反对票](/articles/voa/1010858.md)
 
 11-22 [墨西哥总统承认加拿大对中国汽车厂感到担忧，但表示该厂并不存在](/articles/voa/1010859.md)
-
-11-22 [中国“假留学生”在澳大利亚谋职面临打击](/articles/voa/1010860.md)
-
-11-22 [盖茨退出特朗普的司法部长提名](/articles/voa/1010861.md)
 
