--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-5 [【重温】看理想｜韩国电影中的民主革命](/articles/cdt/334886.md)
+
 12-4 [基本常识｜不买你芯片和不卖你芯片，哪个更有威慑力？](/articles/cdt/334889.md)
 
-12-4 [六神磊磊读金庸｜吴柳芳的幸运，是在2024年擦边](/articles/cdt/334891.md)
+12-4 [【404文库】六神磊磊读金庸｜吴柳芳的幸运，是在2024年擦边](/articles/cdt/334891.md)
 
 12-4 [木白文笔平平｜无知者嘲笑韩国军人不敢对民众开枪，太low了](/articles/cdt/334898.md)
 
@@ -598,6 +600,4 @@
 10-27 [【重温】中国新闻周刊｜临夏12岁女童性侵事件调查](/articles/cdt/336033.md)
 
 10-27 [【立此存照】上海市中山公园｜闭园公告](/articles/cdt/336036.md)
-
-10-27 [追月数星的朋友圈｜12岁女童被轮奸引爆网络后，领导下跪“求饶”，如今孩子抑郁自杀却不管不问](/articles/cdt/336038.md)
 
