--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-5 [面对第二轮中美贸易恶战，北京已做好准备](/articles/nyt/1042143.md)
+
 12-5 [尹锡悦深陷危机：他为何孤注一掷进行政治豪赌？](/articles/nyt/1042144.md)
 
 12-4 [从爱国侨领到美国间谍：中美换囚主角之一梁成运](/articles/nyt/1042145.md)
@@ -598,6 +600,4 @@
 8-27 [加拿大将对中国电动汽车征收100%关税](/articles/nyt/1042441.md)
 
 8-27 [缅甸紧张局势升级，中国军队在中缅边境附近实弹演习](/articles/nyt/1042442.md)
-
-8-27 [中国军机首次侵入日本领空，自卫队战斗机发出警告](/articles/nyt/1042443.md)
 
