--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-5 [韩国执政党反对弹劾总统 国防部长请辞获准](/articles/voa/1010548.md)
+
 12-5 [抗衡中国“一带一路”，拜登在安哥拉参观美国资助的“洛比托走廊”项目](/articles/voa/1010549.md)
 
 12-5 [美议员：台湾向阿拉斯加采购天然气可深化美台战略连结防止中国封锁](/articles/voa/1010550.md)
@@ -598,6 +600,4 @@
 11-22 [COP29将闭幕协议仍难产 气候融资金额陷僵局、中国列发展中国家惹议](/articles/voa/1010846.md)
 
 11-22 [韩国称俄罗斯向朝鲜提供防空导弹 以换取其派兵支持作战](/articles/voa/1010847.md)
-
-11-22 [盖茨退出后 特朗普改提名前佛州检察长执掌司法部](/articles/voa/1010848.md)
 
