--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-5 [20年、超8000万美元：美国付的熊猫租借费“去哪了”](/articles/nyt/1042142.md)
+
 12-5 [面对第二轮中美贸易恶战，北京已做好准备](/articles/nyt/1042143.md)
 
 12-5 [尹锡悦深陷危机：他为何孤注一掷进行政治豪赌？](/articles/nyt/1042144.md)
@@ -598,6 +600,4 @@
 8-27 [避免早恋和性冲动？香港建议青少年打羽毛球](/articles/nyt/1042440.md)
 
 8-27 [加拿大将对中国电动汽车征收100%关税](/articles/nyt/1042441.md)
-
-8-27 [缅甸紧张局势升级，中国军队在中缅边境附近实弹演习](/articles/nyt/1042442.md)
 
