--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-5 [商业注册未完成 越南政府暂停中国电商Temu的运营](/articles/voa/1010546.md)
+
 12-5 [台湾总统访问关岛 呼吁民主伙伴团结对抗极权主义](/articles/voa/1010547.md)
 
 12-5 [韩国执政党反对弹劾总统 国防部长请辞获准](/articles/voa/1010548.md)
@@ -598,6 +600,4 @@
 11-22 [德克萨斯州长下令投资中国的州政府资金立即撤资](/articles/voa/1010844.md)
 
 11-22 [孙韵：特朗普第二任期的美中关系](/articles/voa/1010845.md)
-
-11-22 [COP29将闭幕协议仍难产 气候融资金额陷僵局、中国列发展中国家惹议](/articles/voa/1010846.md)
 
