--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-5 [史上最短命：法国巴尼耶政府被推翻](/articles/dw/1023497.md)
+
+12-5 [尹锡悦面临国会弹劾 执政党称仍将力挺总统](/articles/dw/1023498.md)
+
 12-5 [日本清酒列联合国“非物质文化遗产”](/articles/dw/1023499.md)
 
 12-5 [尹锡悦误判权力引发动荡  韩国经济及国际地位受冲击](/articles/dw/1023500.md)
@@ -596,8 +600,4 @@
 11-5 [特朗普和卡玛拉·哈里斯：选后两人各自会怎样出手应对中国？](/articles/dw/1023795.md)
 
 11-5 [消息人士：SpaceX要求台湾供应商将制造业务转移到海外](/articles/dw/1023796.md)
-
-11-5 [選前最後催票 川普和賀錦麗誰能拿下賓州？](/articles/dw/1023797.md)
-
-11-5 [35年前的东柏林：最大示威游行奏响东德挽歌](/articles/dw/1023798.md)
 
