--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-5 [不满美国最新对台军售，北京宣布新制裁措施](/articles/voa/1010538.md)
+
+12-5 [习近平视察军队强调三个“绝对”，董军现身上海引起外界兴趣](/articles/voa/1010539.md)
+
+12-5 [海外港人在台北发布《自由香港宣言》 誓言灭共并筹组香港议会](/articles/voa/1010540.md)
+
+12-5 [赖清德与美众议院议长通话，北京不满称发出错误信号](/articles/voa/1010541.md)
+
 12-5 [香港宣布两名主要政府官员下台以提升社会与经济效益](/articles/voa/1010542.md)
 
 12-5 [薄瓜瓜突发长文为父母抱屈：“薄习两家不曾有过节”](/articles/voa/1010543.md)
@@ -592,12 +600,4 @@
 11-23 [台湾外长林佳龙首访欧洲 推动经济技术合作](/articles/voa/1010836.md)
 
 11-23 [中国经济不景失业率高企 青年求职无望图谋出走他乡](/articles/voa/1010837.md)
-
-11-23 [基辅证实，俄使用新型中程弹道导弹攻击乌城市，速度不低于11马赫](/articles/voa/1010838.md)
-
-11-23 [美国“强迫劳动黑名单”上新增29家中企，为历来最大规模“扩编”](/articles/voa/1010839.md)
-
-11-23 [香港民主党承压，亲北京媒体高调喊话促解散](/articles/voa/1010840.md)
-
-11-23 [吸引外国游客刺激疲软经济，北京宣布给予十国单方免签待遇](/articles/voa/1010841.md)
 
