--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-6 [尹锡悦面临国会罢免投票和警方有关叛乱罪嫌的调查](/articles/voa/1010533.md)
+
+12-6 [中国前体操国手吴柳芳跳“擦边舞”惹议 映照退役运动员困境](/articles/voa/1010534.md)
+
 12-6 [菲律宾就菲中最新海上摩擦向北京提出外交抗议，两年多抗议次数多达近200次](/articles/voa/1010535.md)
 
 12-6 [中国公民被控向朝鲜走私武器 邻居眼中的他：看上去“友好”，深居简出](/articles/voa/1010536.md)
@@ -596,8 +600,4 @@
 11-23 [法官批准特朗普寻求撤销封口费案](/articles/voa/1010831.md)
 
 11-23 [美国网络安全官员：中国黑客为可能的美中冲突严阵以待](/articles/voa/1010832.md)
-
-11-23 [中国船只是破坏波罗的海海底电缆的罪魁祸首吗？](/articles/voa/1010833.md)
-
-11-23 [被怀疑切断海缆的中国船只仍停留在波罗的海](/articles/voa/1010834.md)
 
