--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-6 [林培瑞：科技加上极权，会不会改变人性？](/articles/voa/1010530.md)
+
+12-6 [《致命中国》作者纳瓦罗再出山 将对华强硬贸易政策进行到底？](/articles/voa/1010531.md)
+
+12-6 [日本向菲律宾提供一千多万美元的援助 提升其海上感知能力](/articles/voa/1010532.md)
+
 12-6 [尹锡悦面临国会罢免投票和警方有关叛乱罪嫌的调查](/articles/voa/1010533.md)
 
 12-6 [中国前体操国手吴柳芳跳“擦边舞”惹议 映照退役运动员困境](/articles/voa/1010534.md)
@@ -594,10 +600,4 @@
 11-23 [华盛顿要求取消中国永久正常贸易关系地位的呼声加大](/articles/voa/1010828.md)
 
 11-23 [美保守派智库献计抵御中国威胁，特朗普会照搬实施吗？](/articles/voa/1010829.md)
-
-11-23 [世界媒体看中国：特朗普2.0与美中关系](/articles/voa/1010830.md)
-
-11-23 [法官批准特朗普寻求撤销封口费案](/articles/voa/1010831.md)
-
-11-23 [美国网络安全官员：中国黑客为可能的美中冲突严阵以待](/articles/voa/1010832.md)
 
