--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-6 [一名中国外交官因敦促巴拉圭议员抛弃台湾而被驱逐](/articles/voa/1010526.md)
+
+12-6 [一半以上在华英国企业对中国商业环境大失所望](/articles/voa/1010527.md)
+
+12-6 [中国经济衰退年轻人遭殃 节衣缩食 求助无望](/articles/voa/1010528.md)
+
+12-6 [报道：除众议长约翰逊外，台湾总统赖清德在关岛期间还与其他美国会领袖通话](/articles/voa/1010529.md)
+
 12-6 [林培瑞：科技加上极权，会不会改变人性？](/articles/voa/1010530.md)
 
 12-6 [《致命中国》作者纳瓦罗再出山 将对华强硬贸易政策进行到底？](/articles/voa/1010531.md)
@@ -592,12 +600,4 @@
 11-23 [特朗普提名贝森特出任财政部长](/articles/voa/1010824.md)
 
 11-23 [VOA专访波兰外长：欧洲必须为美国重新考虑乌克兰战略做好准备](/articles/voa/1010825.md)
-
-11-23 [赖清德将出访南太平洋邦交国 过境美国安排受瞩目](/articles/voa/1010826.md)
-
-11-23 [美副国务卿坎贝尔：美中不会注定开战，但注定是战略竞争关系](/articles/voa/1010827.md)
-
-11-23 [华盛顿要求取消中国永久正常贸易关系地位的呼声加大](/articles/voa/1010828.md)
-
-11-23 [美保守派智库献计抵御中国威胁，特朗普会照搬实施吗？](/articles/voa/1010829.md)
 
