--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-6 [在西海岸发生7级地震后，美国家气象局一度发出海啸警报](/articles/voa/1010523.md)
+
+12-6 [国际特赦称以色列在加沙实施种族灭绝，以色列驳斥其撒谎](/articles/voa/1010524.md)
+
 12-6 [布林肯与拉夫罗夫同场会议针锋相对，指责对方造成乌克兰局势升级](/articles/voa/1010525.md)
 
 12-6 [一名中国外交官因敦促巴拉圭议员抛弃台湾而被驱逐](/articles/voa/1010526.md)
@@ -596,8 +600,4 @@
 11-23 [路透社：富裕国家同意将COP29气候协议金额提高至3000亿美元](/articles/voa/1010821.md)
 
 11-23 [美国与斐济启动驻军地位协定的磋商](/articles/voa/1010822.md)
-
-11-23 [普京称俄罗斯将继续在战斗中测试新型导弹](/articles/voa/1010823.md)
-
-11-23 [特朗普提名贝森特出任财政部长](/articles/voa/1010824.md)
 
