--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-6 [美国医保巨头CEO被枪杀，我们了解到的](/articles/nyt/1042138.md)
+
 12-6 [比特币价格突破10万美元：20年来最成功的投资产品？](/articles/nyt/1042139.md)
 
 12-6 [中国制裁美国多家军工企业及其高管，报复对台军售](/articles/nyt/1042140.md)
@@ -598,6 +600,4 @@
 8-28 [沪式“黄昏恋”：在人民公园和宜家餐厅寻找爱情](/articles/nyt/1042436.md)
 
 8-28 [沙利文访华会见王毅，或为最后一次“习拜会”铺路](/articles/nyt/1042437.md)
-
-8-27 [贺锦丽该制定怎样的对华战略](/articles/nyt/1042438.md)
 
