--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-6 [项栋梁｜建议郑州给公务员发欢乐豆作为工资](/articles/cdt/334856.md)
+
+12-6 [基本常识｜公安不懂法最可怕，精神失常女硕士能被好心“收留”生孩子吗？](/articles/cdt/334860.md)
+
+12-6 [每日一语 2024.12.5](/articles/cdt/334862.md)
+
 12-5 [【网络民议】人民日报｜该改的坚决改，不该改的不改](/articles/cdt/334871.md)
 
 12-5 [每日一语 2024.12.4](/articles/cdt/334873.md)
@@ -594,10 +600,4 @@
 10-28 [黑噪音｜财政：从突击花钱到无钱可花](/articles/cdt/335992.md)
 
 10-28 [木蹊说｜95后硕士炒股两周赚110万？这碗鸡汤有剧毒](/articles/cdt/335994.md)
-
-10-28 [亮见｜骑手公敌，报应来了？](/articles/cdt/335997.md)
-
-10-30 [【CDT月度视频】十月之声(2024)——向《四月之声》致敬](/articles/cdt/335998.md)
-
-10-28 [猛犸工作室｜高位买房的人，选择与自己和解](/articles/cdt/336000.md)
 
