--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-6 [韩执政党立场转变要求总统尽快停职 在野党严防再次戒严](/articles/voa/1010516.md)
+
 12-6 [呼吁“重建民主军火库” 美两党议员称“以实力求和平”是防止美中冲突关键](/articles/voa/1010517.md)
 
 12-6 [特朗普宣布提名前参议员珀杜出任美国驻中国大使](/articles/voa/1010518.md)
@@ -598,6 +600,4 @@
 11-24 [哈利法克斯国际安全论坛聚焦中国威胁](/articles/voa/1010814.md)
 
 11-24 [美若取消中国永久正常贸易关系地位，将如何影响中国经济？](/articles/voa/1010815.md)
-
-11-24 [菲律宾高层分裂公开化！副总统扬言自己如遭不测就刺杀总统马科斯](/articles/voa/1010816.md)
 
