--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-6 [英伟达CEO黄仁勋是如何避税80亿美元的](/articles/nyt/1042136.md)
+
 12-6 [美医保公司CEO被杀民众“称快”，保险业为何引发众怒](/articles/nyt/1042137.md)
 
 12-6 [美国医保巨头CEO被枪杀，我们了解到的](/articles/nyt/1042138.md)
@@ -598,6 +600,4 @@
 8-28 [中国电池厂争议中，特朗普利用反华情绪争取选票](/articles/nyt/1042434.md)
 
 8-28 [特朗普和贺锦丽都选择拥抱关税，具体政策有何不同](/articles/nyt/1042435.md)
-
-8-28 [沪式“黄昏恋”：在人民公园和宜家餐厅寻找爱情](/articles/nyt/1042436.md)
 
