--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-6 [韩国执政党要求总统停职：国家面临巨大危险](/articles/dw/1023485.md)
+
 12-6 [中国防长董军公开露面 英媒曾报道称其涉贪腐被查](/articles/dw/1023486.md)
 
 12-6 [圣尼古拉斯和圣诞老人——谁是谁？](/articles/dw/1023487.md)
@@ -598,6 +600,4 @@
 11-6 [客座评论：特朗普卷土重来 习近平要抓紧时间？](/articles/dw/1023783.md)
 
 11-6 [特朗普获胜 北京亦喜亦忧](/articles/dw/1023784.md)
-
-11-6 [协助打击犯罪、数据隐私新考验 AI能让治安更安全?](/articles/dw/1023785.md)
 
