--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-6 [破纪录！世界银行宣布捐助穷国补充资金达1000亿美元](/articles/voa/1010513.md)
+
 12-6 [中国军演无法赢得尊敬 赖清德呼吁北京“举起拳头不如张开双手”](/articles/voa/1010514.md)
 
 12-6 [美联社：NBA明年将重返中国 举办两场季前赛](/articles/voa/1010515.md)
@@ -598,6 +600,4 @@
 11-24 [因担心失去美墨加贸易协议 墨西哥修改法律 移除中国产零部件](/articles/voa/1010811.md)
 
 11-24 [以色列在贝鲁特市中心未经警告的袭击中打死至少15人，外交官敦促停火](/articles/voa/1010812.md)
-
-11-24 [特朗普将改变中国与中东的战略关系?](/articles/voa/1010813.md)
 
