--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-6 [“看衰”中国，经济学家被网络禁言](/articles/dw/1023482.md)
+
+12-6 [NBA球赛明年将重返中国](/articles/dw/1023483.md)
+
 12-6 [叙利亚第4大城市哈马失守 首都大马士革告急](/articles/dw/1023484.md)
 
 12-6 [韩国执政党要求总统停职：国家面临巨大危险](/articles/dw/1023485.md)
@@ -596,8 +600,4 @@
 11-6 [特朗普赢了 德国经济成了输家](/articles/dw/1023780.md)
 
 11-6 [西班牙灾区民众向国王发泄怒火](/articles/dw/1023781.md)
-
-11-6 [宝马第三季度净利润下降84%](/articles/dw/1023782.md)
-
-11-6 [客座评论：特朗普卷土重来 习近平要抓紧时间？](/articles/dw/1023783.md)
 
