--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-7 [浴火重生 巴黎圣母院重新开放迎来多国政要](/articles/dw/1023479.md)
+
 12-7 [柏林墻與天安門距離有多遠？](/articles/dw/1023480.md)
 
 12-7 [中国财政部：政府采购拟给予本国产品20%价格优惠](/articles/dw/1023481.md)
@@ -598,6 +600,4 @@
 11-7 [德国红绿灯执政联盟破裂 大选或将提前举行](/articles/dw/1023777.md)
 
 11-7 [白宫新主人即将出炉 欧盟心系哪位候选人？](/articles/dw/1023778.md)
-
-11-7 [川普回歸 專家：中美或見「更大範圍經濟脫鉤」](/articles/dw/1023779.md)
 
