--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-7 [睽违5年 巴黎圣母院重新开放 特朗普将出席与马克龙会晤](/articles/voa/1010484.md)
+
 12-7 [叙利亚叛军夺取第四座城市德拉 逼近战略要地霍姆斯](/articles/voa/1010485.md)
 
 12-7 [戒严风波神隐三天 韩国总统尹锡悦露面道歉但未主动请辞](/articles/voa/1010486.md)
@@ -598,6 +600,4 @@
 11-25 [乌拉圭总统选举决选 左翼联盟将重新执政](/articles/voa/1010782.md)
 
 11-25 [委内瑞拉反对派谴责警方“围攻”大使馆](/articles/voa/1010783.md)
-
-11-25 [联合国第五次塑料条约谈判在即 各国分歧如故](/articles/voa/1010784.md)
 
