--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-7 [尹锡悦弹劾案进行表决 韩国执政与在野党角力](/articles/voa/1010481.md)
+
 12-7 [民调居次 德国极右翼政党将首度提名总理候选人](/articles/voa/1010482.md)
 
 12-7 [莫迪领导的印度人民党指美国国务院资助反印度的记者团体](/articles/voa/1010483.md)
@@ -598,6 +600,4 @@
 11-25 [聿文视界：杀人案频传，中国正让其国民处于巨大不安中](/articles/voa/1010779.md)
 
 11-25 [罗马尼亚总统选举爆冷 质疑北约的极右翼候选人意外领跑](/articles/voa/1010780.md)
-
-11-25 [中国气球再度现踪台海上空 7个月来首见](/articles/voa/1010781.md)
 
