--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-7 [学者：国安秩序令香港逐渐转变成“海盗基地”式另类国际金融中心](/articles/voa/1010479.md)
+
+12-7 [专访独立媒体人王剑：习近平如何迎战特朗普2.0时代？](/articles/voa/1010480.md)
+
 12-7 [尹锡悦弹劾案进行表决 韩国执政与在野党角力](/articles/voa/1010481.md)
 
 12-7 [民调居次 德国极右翼政党将首度提名总理候选人](/articles/voa/1010482.md)
@@ -596,8 +600,4 @@
 11-25 [为应对特朗普关税和经济增长“保五”，中国或出新刺激政策](/articles/voa/1010777.md)
 
 11-25 [特朗普提名贝森特任财长受投资人欢迎，欧亚股市星期一纷纷上扬](/articles/voa/1010778.md)
-
-11-25 [聿文视界：杀人案频传，中国正让其国民处于巨大不安中](/articles/voa/1010779.md)
-
-11-25 [罗马尼亚总统选举爆冷 质疑北约的极右翼候选人意外领跑](/articles/voa/1010780.md)
 
