--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-8 [【404媒体】地球公民金建国｜暂停更新通告](/articles/cdt/334826.md)
+
+12-8 [【CDT关注】BBC｜调查：揭开中国新疆番茄产业秘密与“血染货架”的真相](/articles/cdt/334828.md)
+
 12-7 [导筒directube｜奉俊昊、文素利等2500多名韩国电影人联合声明：罢免并逮捕总统尹锡悦](/articles/cdt/334830.md)
 
 12-7 [【404文库】人间三角｜苹果：百度你挡住我了](/articles/cdt/334833.md)
@@ -596,8 +600,4 @@
 10-30 [【旧文重温】南风窗｜他们扮鬼，只是为了活出样来](/articles/cdt/335960.md)
 
 10-30 [姚志勇律师｜少捕慎诉慎押的政策正在变化](/articles/cdt/335964.md)
-
-10-30 [喻涛｜“yq班”：歧视背后的文化重塑](/articles/cdt/335966.md)
-
-10-29 [地球公民金建国｜他们正在摧毁中国人的形象](/articles/cdt/335968.md)
 
