--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-8 [【404文库】吴柳芳“擦边”：“恰恰2024年的人接受了这个故事”（外二篇）](/articles/cdt/334822.md)
+
 12-8 [【404媒体】地球公民金建国｜暂停更新通告](/articles/cdt/334826.md)
 
 12-8 [【CDT关注】BBC｜调查：揭开中国新疆番茄产业秘密与“血染货架”的真相](/articles/cdt/334828.md)
@@ -598,6 +600,4 @@
 10-30 [每日一语 2024.10.29](/articles/cdt/335958.md)
 
 10-30 [【旧文重温】南风窗｜他们扮鬼，只是为了活出样来](/articles/cdt/335960.md)
-
-10-30 [姚志勇律师｜少捕慎诉慎押的政策正在变化](/articles/cdt/335964.md)
 
