--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,13 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-8 [【CDT关注】柴静｜前“明星检察官”出走海外：“我们之所以一路溃退，是因为过于恐惧”](/articles/cdt/334812.md)
+
 12-7 [竹不倒｜俄罗斯的粉丝，被“假俄罗斯商品”骗麻了](/articles/cdt/334814.md)
 
 12-8 [【404文库】吴柳芳“擦边”：“恰恰2024年的人接受了这个故事”（外二篇）](/articles/cdt/334822.md)
+
+12-8 [【网络民议】神不隆通｜新冠疫情解封两周年记](/articles/cdt/334823.md)
 
 12-8 [【404媒体】地球公民金建国｜暂停更新通告](/articles/cdt/334826.md)
 
@@ -596,8 +600,4 @@
 10-30 [亮见｜我又被美团投诉了](/articles/cdt/335944.md)
 
 10-30 [第五二六区｜万圣节没啥可怕，高抬贵手放过他们吧！](/articles/cdt/335946.md)
-
-10-30 [大象公社｜北京这起袭击事件可能是一个信号……](/articles/cdt/335950.md)
-
-10-30 [古老板的老巢｜远洋捕捞成风，地方政府为何如此疯狂？](/articles/cdt/335953.md)
 
