--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-8 [中国在巴基斯坦和阿富汗之间进行调解以保护自身利益能成功吗？](/articles/voa/1010469.md)
+
+12-8 [特朗普2.0 台积电在美国将面临什么挑战与机会？](/articles/voa/1010470.md)
+
 12-8 [特朗普在巴黎受到马克龙总统盛大欢迎，泽连斯基加入双方会晤](/articles/voa/1010471.md)
 
 12-8 [美国官员：美国指责中国窃听“非常高层”政治人物电话](/articles/voa/1010472.md)
@@ -596,8 +600,4 @@
 11-26 [VOA独家：美国会民主党领袖声援越南活动人士邓廷白 呼吁尽快将其释放](/articles/voa/1010767.md)
 
 11-26 [英国议会举行纪念白纸运动两周年活动: 呼吁关注中共的跨国镇压与人权危机](/articles/voa/1010768.md)
-
-11-26 [对中国持批评立场的美国参议员默克利访问台湾](/articles/voa/1010769.md)
-
-11-26 [以色列驻联合国大使：黎巴嫩停火谈判“向前推进”](/articles/voa/1010770.md)
 
