--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-8 [叙利亚反政府武装争夺霍姆斯并向大马士革推进，阿萨德统治危在旦夕](/articles/voa/1010468.md)
+
 12-8 [中国在巴基斯坦和阿富汗之间进行调解以保护自身利益能成功吗？](/articles/voa/1010469.md)
 
 12-8 [特朗普2.0 台积电在美国将面临什么挑战与机会？](/articles/voa/1010470.md)
@@ -598,6 +600,4 @@
 11-26 [快讯：因大量毒品涌入，特朗普誓言对所有中国产品加征10%额外关税](/articles/voa/1010766.md)
 
 11-26 [VOA独家：美国会民主党领袖声援越南活动人士邓廷白 呼吁尽快将其释放](/articles/voa/1010767.md)
-
-11-26 [英国议会举行纪念白纸运动两周年活动: 呼吁关注中共的跨国镇压与人权危机](/articles/voa/1010768.md)
 
