--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-8 [【404文库】三联生活周刊｜深江铁路5标段塌陷之后](/articles/cdt/334806.md)
+
+12-8 [每日一语 2024.12.7](/articles/cdt/334809.md)
+
 12-8 [【CDT关注】柴静｜前“明星检察官”出走海外：“我们之所以一路溃退，是因为过于恐惧”](/articles/cdt/334812.md)
 
 12-7 [竹不倒｜俄罗斯的粉丝，被“假俄罗斯商品”骗麻了](/articles/cdt/334814.md)
@@ -596,8 +600,4 @@
 10-31 [【404出版】學人Scholar｜告别三辉图书：“为这个未知的世界留存一些思想，尽管很微不足道”](/articles/cdt/335939.md)
 
 10-31 [【404文库】“长期以来，中国的水库移民都处于被动、被强制的弱势地位”（外二篇）](/articles/cdt/335941.md)
-
-10-30 [亮见｜我又被美团投诉了](/articles/cdt/335944.md)
-
-10-30 [第五二六区｜万圣节没啥可怕，高抬贵手放过他们吧！](/articles/cdt/335946.md)
 
