--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-8 [国事光析：苛政猛于虎，同样吃干部](/articles/voa/1010464.md)
+
+12-8 [美国众议院将表决拨款30亿美元移除美国电信运营商网络中的中国电信设备](/articles/voa/1010465.md)
+
 12-8 [美国宣布向乌克兰提供9.88亿美元的新军事援助](/articles/voa/1010466.md)
 
 12-8 [341.6万人考公务员,中国“考公”人数创新高背后有什么隐忧](/articles/voa/1010467.md)
@@ -596,8 +600,4 @@
 11-26 [珠海撞人惨案后，美参议员跨党推出法案，反击北京审查制度并推动中国人民言论自由](/articles/voa/1010762.md)
 
 11-26 [白宫：拜登将参加特朗普的就职典礼](/articles/voa/1010763.md)
-
-11-26 [香港“理大围城”五周年，在英港人办研讨会，推动建立国际网络改变对港政策](/articles/voa/1010764.md)
-
-11-26 [美国检察官寻求撤销针对特朗普的联邦刑事案件](/articles/voa/1010765.md)
 
