--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-8 [韩国前防长因戒严事件遭检方拘留 内政部长请辞获准](/articles/voa/1010462.md)
+
 12-8 [叙利亚军方称阿萨德政权已结束 总理表达移交合作意愿](/articles/voa/1010463.md)
 
 12-8 [国事光析：苛政猛于虎，同样吃干部](/articles/voa/1010464.md)
@@ -598,6 +600,4 @@
 11-26 [特朗普誓言对中国加征10%、对加拿大和墨西哥加征25%的新关税](/articles/voa/1010760.md)
 
 11-26 [巴基斯坦警方与被监禁的前总理支持者发生冲突](/articles/voa/1010761.md)
-
-11-26 [珠海撞人惨案后，美参议员跨党推出法案，反击北京审查制度并推动中国人民言论自由](/articles/voa/1010762.md)
 
