--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-8 [解码德国：中国如何看待德国？](/articles/dw/1023463.md)
+
+12-8 [尽管价格飙升 德国人仍对巧克力不离不弃](/articles/dw/1023464.md)
+
+12-8 [美国在非洲修铁路 抗衡中国一带一路](/articles/dw/1023465.md)
+
 12-8 [叙利亚反对派：已推翻阿萨德政权](/articles/dw/1023466.md)
 
 12-8 [德国趋势：民众对经济最为忧心](/articles/dw/1023467.md)
@@ -594,10 +600,4 @@
 11-8 [以色列球迷在荷兰遭袭 阿姆斯特丹市长谴责“反犹”事件](/articles/dw/1023761.md)
 
 11-8 [德国提前大选，选项党会从中受益吗？](/articles/dw/1023762.md)
-
-11-8 [美大选后 台经济部称将拟措施助台企撤中](/articles/dw/1023763.md)
-
-11-8 [华裔美国人会把票投给谁？](/articles/dw/1023764.md)
-
-11-8 [多数德国人希望尽快举行新一届大选](/articles/dw/1023765.md)
 
