--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-8 [韩国前防长被捕 反对党计划再推弹劾](/articles/dw/1023461.md)
+
+12-8 [客座評論﹕韓國短命戒嚴與北京戒嚴](/articles/dw/1023462.md)
+
 12-8 [解码德国：中国如何看待德国？](/articles/dw/1023463.md)
 
 12-8 [尽管价格飙升 德国人仍对巧克力不离不弃](/articles/dw/1023464.md)
@@ -596,8 +600,4 @@
 11-8 [北京斥10万亿救地方债 能拉动经济吗?](/articles/dw/1023759.md)
 
 11-8 [哈里斯、特朗普最后的决战](/articles/dw/1023760.md)
-
-11-8 [以色列球迷在荷兰遭袭 阿姆斯特丹市长谴责“反犹”事件](/articles/dw/1023761.md)
-
-11-8 [德国提前大选，选项党会从中受益吗？](/articles/dw/1023762.md)
 
