--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-8 [中国拟在政府采购中优待国产品 分析：进一步走向固步自封](/articles/voa/1010460.md)
+
 12-8 [中共党媒高层董郁玉被以间谍罪判刑 家属提十大质疑](/articles/voa/1010461.md)
 
 12-8 [韩国前防长因戒严事件遭检方拘留 内政部长请辞获准](/articles/voa/1010462.md)
@@ -598,6 +600,4 @@
 11-26 [美国对谷歌在线广告帝国的反垄断审判接近尾声](/articles/voa/1010758.md)
 
 11-26 [美国农业团体盼特朗普豁免其工人免遭驱逐](/articles/voa/1010759.md)
-
-11-26 [特朗普誓言对中国加征10%、对加拿大和墨西哥加征25%的新关税](/articles/voa/1010760.md)
 
