--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-8 [叙利亚局势突变！中国政府呼吁叙有关方面确保中国公民安全](/articles/voa/1010459.md)
+
 12-8 [中国拟在政府采购中优待国产品 分析：进一步走向固步自封](/articles/voa/1010460.md)
 
 12-8 [中共党媒高层董郁玉被以间谍罪判刑 家属提十大质疑](/articles/voa/1010461.md)
@@ -598,6 +600,4 @@
 11-26 [呼吁保护妇女免遭暴力侵害 示威者遭土耳其警方拘捕](/articles/voa/1010757.md)
 
 11-26 [美国对谷歌在线广告帝国的反垄断审判接近尾声](/articles/voa/1010758.md)
-
-11-26 [美国农业团体盼特朗普豁免其工人免遭驱逐](/articles/voa/1010759.md)
 
