--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-9 [反政府武装推翻阿萨德政权后 联合国呼吁叙利亚要团结](/articles/voa/1010454.md)
+
+12-9 [北京又失一盟友，北京与阿萨德政权关系接受检视](/articles/voa/1010455.md)
+
 12-9 [特朗普2.0对回暖的中澳关系意味着什么？](/articles/voa/1010456.md)
 
 12-9 [特朗普呼吁俄乌立即停火，基辅与莫斯科分别作出回应](/articles/voa/1010457.md)
@@ -596,8 +600,4 @@
 11-27 [联合国谴责塔利班频繁扣押记者，俄准备将塔利班移除恐怖组织名单](/articles/voa/1010752.md)
 
 11-26 [海外港人谴责港人治港新定义：违反中英联合声明](/articles/voa/1010753.md)
-
-11-26 [美国军机过航台海空域，解放军称出动海空兵力“跟监警戒”](/articles/voa/1010754.md)
-
-11-26 [菲国家调查局传唤副总统就她有关刺杀总统言论进行调查](/articles/voa/1010755.md)
 
