--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-9 [阿萨德倒台后 叙利亚北部城市战斗越来越激烈](/articles/voa/1010453.md)
+
 12-9 [反政府武装推翻阿萨德政权后 联合国呼吁叙利亚要团结](/articles/voa/1010454.md)
 
 12-9 [北京又失一盟友，北京与阿萨德政权关系接受检视](/articles/voa/1010455.md)
@@ -598,6 +600,4 @@
 11-27 [易富贤：特朗普再加码，中国应如何应对美国新关税政策](/articles/voa/1010751.md)
 
 11-27 [联合国谴责塔利班频繁扣押记者，俄准备将塔利班移除恐怖组织名单](/articles/voa/1010752.md)
-
-11-26 [海外港人谴责港人治港新定义：违反中英联合声明](/articles/voa/1010753.md)
 
