--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-9 [拜登：美国将与叙利亚的合作伙伴共同管控阿萨德被推翻后的风险](/articles/voa/1010451.md)
+
+12-9 [俄罗斯国家媒体报道 阿萨德已逃往莫斯科](/articles/voa/1010452.md)
+
 12-9 [阿萨德倒台后 叙利亚北部城市战斗越来越激烈](/articles/voa/1010453.md)
 
 12-9 [反政府武装推翻阿萨德政权后 联合国呼吁叙利亚要团结](/articles/voa/1010454.md)
@@ -596,8 +600,4 @@
 11-27 [冲出重围 跨越水门桥：陆战一师老兵回首长津湖战役](/articles/voa/1010749.md)
 
 11-27 [俄乌战局分析：乌军压力增加，俄军攻占土地面积创今年最高记录](/articles/voa/1010750.md)
-
-11-27 [易富贤：特朗普再加码，中国应如何应对美国新关税政策](/articles/voa/1010751.md)
-
-11-27 [联合国谴责塔利班频繁扣押记者，俄准备将塔利班移除恐怖组织名单](/articles/voa/1010752.md)
 
