--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-9 [拜登：阿萨德的叙利亚崩溃是“根本的正义行为”](/articles/voa/1010449.md)
+
+12-9 [特朗普：上任第一天将开始全面变革](/articles/voa/1010450.md)
+
 12-9 [拜登：美国将与叙利亚的合作伙伴共同管控阿萨德被推翻后的风险](/articles/voa/1010451.md)
 
 12-9 [俄罗斯国家媒体报道 阿萨德已逃往莫斯科](/articles/voa/1010452.md)
@@ -596,8 +600,4 @@
 11-27 [一名货运代理公司创始人对串谋非法向被制裁中国公司出口货物的指控认罪](/articles/voa/1010747.md)
 
 11-27 [缅甸反政府武装占领边境重镇和稀土矿业中心](/articles/voa/1010748.md)
-
-11-27 [冲出重围 跨越水门桥：陆战一师老兵回首长津湖战役](/articles/voa/1010749.md)
-
-11-27 [俄乌战局分析：乌军压力增加，俄军攻占土地面积创今年最高记录](/articles/voa/1010750.md)
 
