--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-9 [时间轴：阿萨德垮台前经历了多年的流血和分裂](/articles/voa/1010448.md)
+
 12-9 [拜登：阿萨德的叙利亚崩溃是“根本的正义行为”](/articles/voa/1010449.md)
 
 12-9 [特朗普：上任第一天将开始全面变革](/articles/voa/1010450.md)
@@ -598,6 +600,4 @@
 11-27 [拜登宣布以色列与黎巴嫩真主党同意停火](/articles/voa/1010746.md)
 
 11-27 [一名货运代理公司创始人对串谋非法向被制裁中国公司出口货物的指控认罪](/articles/voa/1010747.md)
-
-11-27 [缅甸反政府武装占领边境重镇和稀土矿业中心](/articles/voa/1010748.md)
 
