--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-9 [叙利亚一夜变天，你需要了解的五大问题](/articles/nyt/1042134.md)
+
 12-9 [特朗普提名的驻华大使戴维·珀杜是谁](/articles/nyt/1042135.md)
 
 12-6 [英伟达CEO黄仁勋是如何避税80亿美元的](/articles/nyt/1042136.md)
@@ -598,6 +600,4 @@
 8-29 [沙利文与王毅会谈11小时，白宫称拜登将与习近平通话](/articles/nyt/1042432.md)
 
 8-29 [科技公司高管该为平台上的内容负责吗？](/articles/nyt/1042433.md)
-
-8-28 [中国电池厂争议中，特朗普利用反华情绪争取选票](/articles/nyt/1042434.md)
 
