--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-9 [俄罗斯官媒：阿萨德获得莫斯科庇护](/articles/dw/1023456.md)
+
 12-8 [墙外文摘：还珠格格和甄嬛，哪种叙事更保守？](/articles/dw/1023457.md)
 
 12-8 [叙利亚政局突变 国际社会如此反应](/articles/dw/1023458.md)
@@ -598,6 +600,4 @@
 11-9 [特朗普高调发表演说：美国将迎来真正的黄金时代](/articles/dw/1023754.md)
 
 11-9 [巴基斯坦火车站遭炸弹袭击致数十人死亡](/articles/dw/1023755.md)
-
-11-9 [美国2024：大选之夜的欢庆与失落](/articles/dw/1023756.md)
 
