--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,11 +3,15 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-9 [2024.12.8](/articles/cdt/334788.md)
+
 12-9 [人生不鱼期｜灵隐寺没保住叙利亚，却提前送走了阿萨德](/articles/cdt/334794.md)
 
 12-9 [极昼工作室｜快递驿站没有新闻，只是越来越难做了](/articles/cdt/334795.md)
 
 12-9 [每日人物｜单亲妈妈，带两个女儿住进烂尾楼](/articles/cdt/334796.md)
+
+12-9 [【CDT关注】宋永毅｜《哨兵国家》书评：揭开存放于黑箱中的中共监控史的机密](/articles/cdt/334797.md)
 
 12-8 [【404文库】三联生活周刊｜深江铁路5标段塌陷之后](/articles/cdt/334806.md)
 
@@ -596,8 +600,4 @@
 11-1 [建设性意见｜限制万圣节装扮，是哪座城市最心虚？](/articles/cdt/335923.md)
 
 10-31 [不跪的世界｜比万圣节更怪诞——公司支付的工资，员工只拿到1/3？](/articles/cdt/335924.md)
-
-10-31 [修明札记｜最近的生育激励政策，力度还是有点小](/articles/cdt/335927.md)
-
-10-31 [四环青年｜投资千万建厂拿不到许可证，核查组的借口匪夷所思](/articles/cdt/335929.md)
 
