--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-9 [*美国将继续支持在叙利亚的库尔德盟友](/articles/voa/1010446.md)
+
 12-9 [世界对叙利亚阿萨德统治终结的反应](/articles/voa/1010447.md)
 
 12-9 [时间轴：阿萨德垮台前经历了多年的流血和分裂](/articles/voa/1010448.md)
@@ -598,6 +600,4 @@
 11-27 [流亡维吾尔人指控新疆党委书记将镇压延伸至疆外](/articles/voa/1010744.md)
 
 11-27 [内蒙汉族女教师殴打蒙古族女童致严重伤害，引起蒙古族民众强烈不满](/articles/voa/1010745.md)
-
-11-27 [拜登宣布以色列与黎巴嫩真主党同意停火](/articles/voa/1010746.md)
 
