--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-9 [后代聊斋｜既然被好心人收留了，识相的还是感恩吧](/articles/cdt/334781.md)
+
+12-9 [建设性意见｜广州地铁安检，不要发癫了好吗？](/articles/cdt/334786.md)
+
 12-9 [2024.12.8](/articles/cdt/334788.md)
 
 12-9 [人生不鱼期｜灵隐寺没保住叙利亚，却提前送走了阿萨德](/articles/cdt/334794.md)
@@ -596,8 +600,4 @@
 11-1 [风声OPINION｜为什么出台了不少刺激消费的政策，消费还是不够强劲？](/articles/cdt/335920.md)
 
 11-1 [剥洋葱people｜被造谣“十万彩礼做女友”女生：我不是货架上的商品](/articles/cdt/335921.md)
-
-11-1 [建设性意见｜限制万圣节装扮，是哪座城市最心虚？](/articles/cdt/335923.md)
-
-10-31 [不跪的世界｜比万圣节更怪诞——公司支付的工资，员工只拿到1/3？](/articles/cdt/335924.md)
 
