--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-9 [“布鲁克林之王”陈善庄：亲中共的纽约权力掮客](/articles/nyt/1042132.md)
+
 12-9 [盐水鸭、名牌、百万报酬：孙雯“中国代理人”案细节曝光](/articles/nyt/1042133.md)
 
 12-9 [叙利亚一夜变天，你需要了解的五大问题](/articles/nyt/1042134.md)
@@ -598,6 +600,4 @@
 8-29 [前白宫顾问新书爆料特朗普被习近平“当猴耍”](/articles/nyt/1042430.md)
 
 8-29 [非洲债务危机或对全球产生“灾难性影响”](/articles/nyt/1042431.md)
-
-8-29 [沙利文与王毅会谈11小时，白宫称拜登将与习近平通话](/articles/nyt/1042432.md)
 
