--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-9 [言情小说家琼瑶逝世：一个时代的浪漫爱情符号](/articles/nyt/1042131.md)
+
 12-9 [“布鲁克林之王”陈善庄：亲中共的纽约权力掮客](/articles/nyt/1042132.md)
 
 12-9 [盐水鸭、名牌、百万报酬：孙雯“中国代理人”案细节曝光](/articles/nyt/1042133.md)
@@ -598,6 +600,4 @@
 8-30 [沙利文与习近平、张又侠会面，推动中美军事沟通](/articles/nyt/1042429.md)
 
 8-29 [前白宫顾问新书爆料特朗普被习近平“当猴耍”](/articles/nyt/1042430.md)
-
-8-29 [非洲债务危机或对全球产生“灾难性影响”](/articles/nyt/1042431.md)
 
