--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-9 [元淦恭说｜信号再明显不过了](/articles/cdt/334777.md)
+
 12-9 [后代聊斋｜既然被好心人收留了，识相的还是感恩吧](/articles/cdt/334781.md)
 
 12-9 [建设性意见｜广州地铁安检，不要发癫了好吗？](/articles/cdt/334786.md)
@@ -598,6 +600,4 @@
 11-1 [每日一语 2024.10.31](/articles/cdt/335916.md)
 
 11-1 [风声OPINION｜为什么出台了不少刺激消费的政策，消费还是不够强劲？](/articles/cdt/335920.md)
-
-11-1 [剥洋葱people｜被造谣“十万彩礼做女友”女生：我不是货架上的商品](/articles/cdt/335921.md)
 
