--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-9 [聿文视界：阿萨德政权垮台，北京中东战略的努力受挫](/articles/voa/1010443.md)
+
 12-9 [灾后重生 巴黎圣母院举行2019年大火后首次弥撒](/articles/voa/1010444.md)
 
 12-9 [格鲁吉亚记者控遭到野蛮殴打；对暂停入欧谈判的抗议持续激化](/articles/voa/1010445.md)
@@ -598,6 +600,4 @@
 11-27 [何为AI“曼哈顿计划”？一文了解美中21世纪“科技军备竞赛”](/articles/voa/1010741.md)
 
 11-27 [以色列与黎巴嫩真主党达成停火](/articles/voa/1010742.md)
-
-11-27 [美参议员访台会赖清德：在美政府交接之际表达国会对台湾的跨党派支持](/articles/voa/1010743.md)
 
