--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-9 [文学报｜2024诺奖得主韩江发表获奖演讲：历史可以帮助当下，让文字传递爱的光线](/articles/cdt/334775.md)
+
 12-9 [元淦恭说｜信号再明显不过了](/articles/cdt/334777.md)
 
 12-9 [后代聊斋｜既然被好心人收留了，识相的还是感恩吧](/articles/cdt/334781.md)
@@ -598,6 +600,4 @@
 11-1 [【404文库】老干体v｜你觉得不行了是什么时候？](/articles/cdt/335914.md)
 
 11-1 [每日一语 2024.10.31](/articles/cdt/335916.md)
-
-11-1 [风声OPINION｜为什么出台了不少刺激消费的政策，消费还是不够强劲？](/articles/cdt/335920.md)
 
