--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-9 [阿萨德倒台 德国暂停叙利亚难民申请程序](/articles/dw/1023446.md)
+
 12-9 [澳大利亚与瑙鲁签署安全条约](/articles/dw/1023447.md)
 
 12-9 [她們來自香港：兩座民主女神像柏林展出](/articles/dw/1023448.md)
@@ -598,6 +600,4 @@
 11-10 [特朗普胜选：为什么从当选总统到入职还要等待那么长时间？](/articles/dw/1023744.md)
 
 11-10 [客座评论：中国还能对朝鲜施加影响吗？](/articles/dw/1023745.md)
-
-11-10 [研究报告：欧洲军费有所增加 但兵力不足仍是问题](/articles/dw/1023746.md)
 
