--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-9 [后阿萨德时代：叙利亚国内外势力谁与争锋](/articles/dw/1023443.md)
+
+12-9 [中国对英伟达展开反垄断调查](/articles/dw/1023444.md)
+
 12-9 [柏林动物园为熊猫双胞胎取名「梦好」、「梦甜」](/articles/dw/1023445.md)
 
 12-9 [阿萨德倒台 德国暂停叙利亚难民申请程序](/articles/dw/1023446.md)
@@ -596,8 +600,4 @@
 11-10 [特朗普又来了！德国民众：他当选对德国是灾难](/articles/dw/1023741.md)
 
 11-10 [调研：德国人比去年更幸福](/articles/dw/1023742.md)
-
-11-10 [德国出生率降至十年最低](/articles/dw/1023743.md)
-
-11-10 [特朗普胜选：为什么从当选总统到入职还要等待那么长时间？](/articles/dw/1023744.md)
 
