--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-10 [以色列：将加速摧毁叙利亚境内所有重型战略武器](/articles/voa/1010435.md)
+
+12-10 [中国对英伟达展开报复性调查，美中芯片战再升级](/articles/voa/1010436.md)
+
 12-10 [再为疲软经济输血，中共政治局14年来首次承诺放松货币政策](/articles/voa/1010437.md)
 
 12-10 [中国出动90艘舰船似沿整个第一岛链军演，台湾保持高度警戒](/articles/voa/1010438.md)
@@ -596,8 +600,4 @@
 11-27 [中国警告新西兰不要加入AUKUS 否则将有负面后果](/articles/voa/1010733.md)
 
 11-27 [特朗普祭新关税威胁 墨西哥、加拿大、中国如何回应？](/articles/voa/1010734.md)
-
-11-27 [董军任防长未及一年 今年三次出访](/articles/voa/1010735.md)
-
-11-27 [金融时报：中国防长董军因腐败接受调查](/articles/voa/1010736.md)
 
