--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-10 [中国宣布货币政策转向“适度宽松”，应对经济挑战](/articles/nyt/1042130.md)
+
 12-9 [言情小说家琼瑶逝世：一个时代的浪漫爱情符号](/articles/nyt/1042131.md)
 
 12-9 [“布鲁克林之王”陈善庄：亲中共的纽约权力掮客](/articles/nyt/1042132.md)
@@ -598,6 +600,4 @@
 8-30 [中国科技公司能否在硅谷找到立足之地？](/articles/nyt/1042428.md)
 
 8-30 [沙利文与习近平、张又侠会面，推动中美军事沟通](/articles/nyt/1042429.md)
-
-8-29 [前白宫顾问新书爆料特朗普被习近平“当猴耍”](/articles/nyt/1042430.md)
 
