--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-10 [媒體：中國將限制對歐美出口無人機關鍵零件](/articles/dw/1023442.md)
+
 12-9 [后阿萨德时代：叙利亚国内外势力谁与争锋](/articles/dw/1023443.md)
 
 12-9 [中国对英伟达展开反垄断调查](/articles/dw/1023444.md)
@@ -598,6 +600,4 @@
 11-10 [特朗普宣布将蓬佩奥和黑利排除在新内阁之外](/articles/dw/1023740.md)
 
 11-10 [特朗普又来了！德国民众：他当选对德国是灾难](/articles/dw/1023741.md)
-
-11-10 [调研：德国人比去年更幸福](/articles/dw/1023742.md)
 
