--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-10 [曼哈顿枪击案嫌犯：从藤校精英到杀人疑凶](/articles/nyt/1042126.md)
+
 12-10 [中国对关键矿产实施严格禁运令，跨国公司倍感担忧](/articles/nyt/1042127.md)
 
 12-10 [中国对英伟达展开反垄断调查，中美芯片战再升级](/articles/nyt/1042128.md)
@@ -598,6 +600,4 @@
 8-30 [中国至关重要，但美国总统候选人为何鲜少提及对华政策？](/articles/nyt/1042424.md)
 
 8-30 [“TikTok法案”无法解决的深层安全问题](/articles/nyt/1042425.md)
-
-8-30 [“人夫气质”助力美国大选](/articles/nyt/1042426.md)
 
