--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-10 [拜登面临为联邦死囚减刑的压力](/articles/voa/1010421.md)
+
 12-10 [少数民族武装团体声称占领缅甸西部主要边境](/articles/voa/1010422.md)
 
 12-10 [媒体大亨默多克试图更改家族信托失败](/articles/voa/1010423.md)
@@ -598,6 +600,4 @@
 11-28 [特朗普为二度执政加快准备,对台政策是否有变引关注](/articles/voa/1010719.md)
 
 11-28 [拜登造访安哥拉: 美中在非洲竞争的新战线?](/articles/voa/1010720.md)
-
-11-28 [数据显示外国智能手机10月在华销量暴跌44%](/articles/voa/1010721.md)
 
