--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-10 [观人随笔｜“收留”终究不是法治，沉默总是淹没常识](/articles/cdt/334758.md)
+
 12-10 [每日一语 2024.12.9](/articles/cdt/334760.md)
 
 12-10 [亮见｜被“收留”女硕士后续，让人出离愤怒](/articles/cdt/334763.md)
@@ -598,6 +600,4 @@
 11-2 [旧闻评论｜老胡归来：续写双向奔赴的舆论孽缘](/articles/cdt/335895.md)
 
 11-3 [【CDT周报】第193期：“万梗节”无法被禁止，它不在巨鹿路，就在其他路](/articles/cdt/335896.md)
-
-11-2 [正面连接｜救救工厂：工厂真的卷不动了](/articles/cdt/335898.md)
 
