--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-10 [太平洋岛国担心特朗普重入白宫后美中竞争加剧导致地区对抗](/articles/voa/1010417.md)
+
 12-10 [绝望的叙利亚人在臭名昭著的赛德纳亚监狱搜寻失踪亲人](/articles/voa/1010418.md)
 
 12-10 [地球土地正在干涸；各国试图在本周会谈中应对此问题](/articles/voa/1010419.md)
@@ -598,6 +600,4 @@
 11-28 [极右翼候选人选票领先后 罗马尼亚当局将调查外国干涉](/articles/voa/1010715.md)
 
 11-28 [拜登将访问安哥拉，强调“洛比托走廊”的重要性，以此在非洲对抗中国](/articles/voa/1010716.md)
-
-11-28 [美中换囚：他们都是谁？](/articles/voa/1010717.md)
 
