--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-11 [挪威TALK｜广州地铁折腾安检验证了一个朴素的道理](/articles/cdt/334748.md)
+
 12-10 [四环青年｜地铁安检新规仅持续10小时？来回折腾打工人得有人负责](/articles/cdt/334751.md)
 
 12-10 [基本常识｜丰县铁链女之后没有全面清查，所以才有“收留”女硕士的荒唐](/articles/cdt/334754.md)
@@ -598,6 +600,4 @@
 11-3 [海外掘金｜中国最国际化的城市，关停唯一的外语频道](/articles/cdt/335798.md)
 
 11-3 [艾大荀｜公益机构失去的，是自我设置议题的权利](/articles/cdt/335880.md)
-
-11-3 [重案组37号｜被囚禁的5年，被转向的人生](/articles/cdt/335891.md)
 
