--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-11 [大批解放军机舰连日近逼台湾，似为“封锁台湾”恫吓行动一环](/articles/voa/1010411.md)
+
 12-11 [泽连斯基告诉特朗普，普京只害怕一个人](/articles/voa/1010412.md)
 
 12-11 [以色列猛烈空袭叙利亚全境，但否认以军地面部队向大马士革挺进](/articles/voa/1010413.md)
@@ -598,6 +600,4 @@
 11-28 [路透社：拜登准备向乌克兰提供价值7.25亿美元的新一批军援](/articles/voa/1010709.md)
 
 11-28 [特朗普称墨西哥同意阻止无证移民进入美国 辛鲍姆淡化其说法](/articles/voa/1010710.md)
-
-11-28 [赖清德即将出访太平洋友邦 台湾进行防空作战演练](/articles/voa/1010711.md)
 
