--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-11 [NBA 2025重返中国赛场: 政治风波后的商业与篮球双重回归](/articles/voa/1010409.md)
+
+12-11 [越南、印尼相继颁禁令 中国跨境电商平台在东南亚受挫](/articles/voa/1010410.md)
+
 12-11 [大批解放军机舰连日近逼台湾，似为“封锁台湾”恫吓行动一环](/articles/voa/1010411.md)
 
 12-11 [泽连斯基告诉特朗普，普京只害怕一个人](/articles/voa/1010412.md)
@@ -596,8 +600,4 @@
 11-28 [赖清德首次元首外交出访 将过境美国夏威夷和关岛](/articles/voa/1010707.md)
 
 11-28 [北京证实中央军委苗华停职接受调查 斥董军被查报道“造谣”](/articles/voa/1010708.md)
-
-11-28 [路透社：拜登准备向乌克兰提供价值7.25亿美元的新一批军援](/articles/voa/1010709.md)
-
-11-28 [特朗普称墨西哥同意阻止无证移民进入美国 辛鲍姆淡化其说法](/articles/voa/1010710.md)
 
