--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-11 [美台宣布美台21世纪贸易倡议首批协议正式生效](/articles/voa/1010405.md)
+
+12-11 [美国制裁破坏全球防火墙的中国公司和个人，并起诉和悬赏通缉涉案中国公民](/articles/voa/1010406.md)
+
+12-11 [美众院听取中国“盐台风”电信黑客攻击简报 议长约翰逊：令人震惊！](/articles/voa/1010407.md)
+
+12-11 [波兰总理：俄乌和谈可能冬季开始](/articles/voa/1010408.md)
+
 12-11 [NBA 2025重返中国赛场: 政治风波后的商业与篮球双重回归](/articles/voa/1010409.md)
 
 12-11 [越南、印尼相继颁禁令 中国跨境电商平台在东南亚受挫](/articles/voa/1010410.md)
@@ -592,12 +600,4 @@
 11-28 [俄军再次“大规模”空袭乌克兰基础设施，百万住宅断电](/articles/voa/1010703.md)
 
 11-28 [苗华落马早现端倪？分析：解放军高层贪腐被抓“无需意外”](/articles/voa/1010704.md)
-
-11-28 [路透：卫星图像显示中国民兵船在菲控铁峙岛周边大量集结](/articles/voa/1010705.md)
-
-11-28 [美中落实换囚协议，中方证实三名获释中国公民已回国](/articles/voa/1010706.md)
-
-11-28 [赖清德首次元首外交出访 将过境美国夏威夷和关岛](/articles/voa/1010707.md)
-
-11-28 [北京证实中央军委苗华停职接受调查 斥董军被查报道“造谣”](/articles/voa/1010708.md)
 
