--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-11 [台湾称中国展开近30年来最大规模海上行动](/articles/nyt/1042125.md)
+
 12-10 [曼哈顿枪击案嫌犯：从藤校精英到杀人疑凶](/articles/nyt/1042126.md)
 
 12-10 [中国对关键矿产实施严格禁运令，跨国公司倍感担忧](/articles/nyt/1042127.md)
@@ -598,6 +600,4 @@
 9-2 [韩国最高情报机构官员被指控向中国泄露卧底特工名单](/articles/nyt/1042423.md)
 
 8-30 [中国至关重要，但美国总统候选人为何鲜少提及对华政策？](/articles/nyt/1042424.md)
-
-8-30 [“TikTok法案”无法解决的深层安全问题](/articles/nyt/1042425.md)
 
