--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-11 [Northvolt申请破产保护 欧洲绿色电池自主化梦碎](/articles/dw/1023430.md)
+
 12-10 [客座评论：王金平两岸新论述，民共都不会接受](/articles/dw/1023431.md)
 
 12-10 [叙利亚新当权者朱拉尼是何许人？](/articles/dw/1023432.md)
@@ -598,6 +600,4 @@
 11-12 [用人唯「忠」 川普新政府公布了哪些人選？](/articles/dw/1023728.md)
 
 11-11 [日本众院选举 石破茂得以留任](/articles/dw/1023729.md)
-
-11-11 [媒体称台湾拟向美大量军购 总统府：无新一阶段讨论](/articles/dw/1023730.md)
 
