--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-11 [消息人士：中国高层考虑削弱人民币汇率应对特朗普新一轮关税战](/articles/dw/1023429.md)
+
 12-11 [Northvolt申请破产保护 欧洲绿色电池自主化梦碎](/articles/dw/1023430.md)
 
 12-10 [客座评论：王金平两岸新论述，民共都不会接受](/articles/dw/1023431.md)
@@ -598,6 +600,4 @@
 11-12 [长平观察：既怕他们“举纸”优雅，又怕他们“骑行”怪状](/articles/dw/1023727.md)
 
 11-12 [用人唯「忠」 川普新政府公布了哪些人選？](/articles/dw/1023728.md)
-
-11-11 [日本众院选举 石破茂得以留任](/articles/dw/1023729.md)
 
