--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-11 [黎智英法庭自辩“集中营“说法](/articles/dw/1023425.md)
+
 12-11 [韩国总统府遭突查  目前谁掌管国家？](/articles/dw/1023426.md)
 
 12-11 [消息人士：泽连斯基会晤特朗普时强调需安全保障](/articles/dw/1023427.md)
@@ -598,6 +600,4 @@
 11-12 [长平观察：“若哈哈姐赢了，中国的女拳更要癫狂”](/articles/dw/1023723.md)
 
 11-12 [调查：卫星图像显示中国为制造核动力航母做准备](/articles/dw/1023724.md)
-
-11-12 [德国预计将于明年2月提前大选](/articles/dw/1023725.md)
 
