--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-11 [吾我五木｜关于女硕士被“收留”，几点疑问与一封信息公开申请](/articles/cdt/334702.md)
+
 12-11 [房东老冯｜日本的地铁为什么不需要安检](/articles/cdt/334722.md)
 
 12-11 [三联生活实验室｜花200块当一天精英？网红正在占领联合国](/articles/cdt/334724.md)
@@ -598,6 +600,4 @@
 11-4 [凤凰网｜真实世界里的逝者沙白：对话沙白父亲、朋友、前同事、学生、邻居](/articles/cdt/335759.md)
 
 11-4 [萝严肃｜对一个主妇的恨意](/articles/cdt/335765.md)
-
-11-4 [每日一语 2024.11.3](/articles/cdt/335767.md)
 
