--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-11 [为应对特朗普关税压力，北京拟做出重大政策调整 允许人民币扩大贬值幅度](/articles/voa/1010392.md)
+
+12-11 [美推出新国家安全战略对抗“恶霸四国”，为新政府提供路线图](/articles/voa/1010393.md)
+
 12-11 [中国持续军演武吓 台湾陆委会：“双城论坛”有条件举办](/articles/voa/1010394.md)
 
 12-11 [联合国报告：人口贩运在疫情后急剧上升](/articles/voa/1010395.md)
@@ -596,8 +600,4 @@
 11-29 [谁是操作驻英美军基地上空无人机的黑手？](/articles/voa/1010690.md)
 
 11-29 [以色列和真主党互相指责对方违反停火协议](/articles/voa/1010691.md)
-
-11-29 [非洲舞台上的美中博弈：津巴布韦的机遇与挑战](/articles/voa/1010692.md)
-
-11-29 [美中换囚后 三名美国公民抵达德克萨斯州](/articles/voa/1010693.md)
 
