--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-12 [红星评论｜高校公示学生变性信息，要平衡知情权和隐私权](/articles/cdt/334698.md)
+
 12-12 [【朋友圈】山西和顺县“收留”女硕士事件时间线整理](/articles/cdt/334701.md)
 
 12-11 [吾我五木｜关于女硕士被“收留”，几点疑问与一封信息公开申请](/articles/cdt/334702.md)
@@ -598,6 +600,4 @@
 11-4 [倪刃｜被滥用的“内卷”一词，本意早已被扭曲](/articles/cdt/335752.md)
 
 11-4 [西坡原创｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335755.md)
-
-11-4 [凤凰网｜真实世界里的逝者沙白：对话沙白父亲、朋友、前同事、学生、邻居](/articles/cdt/335759.md)
 
