--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-12 [台湾要求北京停止对台军事恫吓和一切危害区域和平稳定的非理性行为](/articles/voa/1010390.md)
+
+12-12 [韩国戒严令事件调查扩大：搜查总统府遇阻，军警高官被捕，前防长自杀未遂](/articles/voa/1010391.md)
+
 12-11 [为应对特朗普关税压力，北京拟做出重大政策调整 允许人民币扩大贬值幅度](/articles/voa/1010392.md)
 
 12-11 [美推出新国家安全战略对抗“恶霸四国”，为新政府提供路线图](/articles/voa/1010393.md)
@@ -596,8 +600,4 @@
 11-29 [格鲁吉亚民众抗议政府暂停欧盟申请至2028年](/articles/voa/1010688.md)
 
 11-29 [法国干邑工人抗议中国关税威胁下的出口装瓶计划](/articles/voa/1010689.md)
-
-11-29 [谁是操作驻英美军基地上空无人机的黑手？](/articles/voa/1010690.md)
-
-11-29 [以色列和真主党互相指责对方违反停火协议](/articles/voa/1010691.md)
 
