--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-12 [Lola｜历史的唯一出口](/articles/cdt/334694.md)
+
 12-12 [红星评论｜高校公示学生变性信息，要平衡知情权和隐私权](/articles/cdt/334698.md)
 
 12-12 [【朋友圈】山西和顺县“收留”女硕士事件时间线整理](/articles/cdt/334701.md)
@@ -598,6 +600,4 @@
 11-5 [【404文库】卖杏花｜不要骂姜萍，是你活该](/articles/cdt/335749.md)
 
 11-4 [倪刃｜被滥用的“内卷”一词，本意早已被扭曲](/articles/cdt/335752.md)
-
-11-4 [西坡原创｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335755.md)
 
