--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-12 [印第安纳州一名女子因出于种族仇恨袭击一名华裔女大学生而被判处监禁](/articles/voa/1010383.md)
+
+12-12 [缅甸反中情绪高涨 在缅中资岌岌可危？](/articles/voa/1010384.md)
+
 12-12 [联调局局长克里斯托弗·雷表示计划辞去职务](/articles/voa/1010385.md)
 
 12-12 [美国半年之内向中国派出第四架遣返包机 赴美庇护门槛恐越来越高](/articles/voa/1010386.md)
@@ -596,8 +600,4 @@
 11-29 [《国有器官》揭中国活摘器官遭炸弹恐吓 台湾不畏威胁如期播映](/articles/voa/1010681.md)
 
 11-29 [赖清德外访过境夏威夷关岛，北京吁美“慎之又慎”处理台湾问题](/articles/voa/1010682.md)
-
-11-29 [优衣库不用新疆棉，是国际企业“迟到的正义”还是“健康的发展”？](/articles/voa/1010683.md)
-
-11-29 [柳井正首度表态称“不使用新疆棉” 优衣库面临被中国抵制的风险](/articles/voa/1010684.md)
 
