--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-12 [中俄北极合作为什么令美国和西方担忧？](/articles/voa/1010380.md)
+
+12-12 [以色列呼吁采取行动保护叙利亚库尔德人](/articles/voa/1010381.md)
+
+12-12 [重开一蒙中边境口岸是为了方便中国采矿？](/articles/voa/1010382.md)
+
 12-12 [印第安纳州一名女子因出于种族仇恨袭击一名华裔女大学生而被判处监禁](/articles/voa/1010383.md)
 
 12-12 [缅甸反中情绪高涨 在缅中资岌岌可危？](/articles/voa/1010384.md)
@@ -594,10 +600,4 @@
 11-30 [“贼喊捉贼”？中国警告公民慎防境外被盘查，学者指北京意在混淆视听](/articles/voa/1010678.md)
 
 11-30 [媒体人董郁玉间谍罪成 家人：这对每一位有自由思想的中国记者“严重不公”](/articles/voa/1010679.md)
-
-11-29 [中俄两军在日本海上空再次举行联合空中战略巡航](/articles/voa/1010680.md)
-
-11-29 [《国有器官》揭中国活摘器官遭炸弹恐吓 台湾不畏威胁如期播映](/articles/voa/1010681.md)
-
-11-29 [赖清德外访过境夏威夷关岛，北京吁美“慎之又慎”处理台湾问题](/articles/voa/1010682.md)
 
