--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-12 [布林肯前往中东，叙利亚探索后阿萨德时代的道路](/articles/voa/1010378.md)
+
 12-12 [美司法部：一名中国公民因用无人机航拍美军基地而被捕](/articles/voa/1010379.md)
 
 12-12 [中俄北极合作为什么令美国和西方担忧？](/articles/voa/1010380.md)
@@ -598,6 +600,4 @@
 11-30 [在中国拉美影响力日益增强之际，巴拉圭誓言维护与台湾的关系](/articles/voa/1010676.md)
 
 11-30 [俄罗斯国防部长访朝鲜，平壤出兵援俄之后进一步密切两国军事合作关系](/articles/voa/1010677.md)
-
-11-30 [“贼喊捉贼”？中国警告公民慎防境外被盘查，学者指北京意在混淆视听](/articles/voa/1010678.md)
 
