--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+12-12 [美国多所高校建议国际生在特朗普就职前返美](/articles/nyt/1042119.md)
+
+12-12 [中美关系面临新变局，拜登政府为加强沟通渠道做最后努力](/articles/nyt/1042120.md)
+
 12-11 [反平权法案、担忧“零元购”，华裔美国人“右转”](/articles/nyt/1042121.md)
 
 12-11 [中国首宗跨性别“扭转治疗”诉讼：原告获医院赔偿](/articles/nyt/1042122.md)
@@ -596,8 +600,4 @@
 9-3 [中国重振经济为何这么难](/articles/nyt/1042417.md)
 
 9-3 [艺术家高兟回中国探亲时被捕，曾创作批评文革作品](/articles/nyt/1042418.md)
-
-9-3 [暴雨致中国北方农田被淹，各地蔬菜价格飞涨](/articles/nyt/1042419.md)
-
-9-2 [从加沙、约旦河西岸到黎巴嫩，以色列“打不完”的仗](/articles/nyt/1042420.md)
 
