--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-12 [联合国法院气候审理结果或引发针对中国碳排放的国际法律诉讼](/articles/voa/1010374.md)
+
+12-12 [叙利亚反政府武装指挥官：将追捕阿萨德的副手](/articles/voa/1010375.md)
+
 12-12 [应对“混乱四重奏”：拜登政府就中俄朝伊安全威胁为继任者列出新方案](/articles/voa/1010376.md)
 
 12-12 [美众院通过2025国防授权法 共和党领袖：将“如激光般”聚焦应对中国威胁](/articles/voa/1010377.md)
@@ -596,8 +600,4 @@
 11-30 [乌克兰敦促北约下周发出入盟邀请](/articles/voa/1010672.md)
 
 11-30 [叙利亚反政府武装及盟友夺取阿勒颇城部分控制权](/articles/voa/1010673.md)
-
-11-30 [美国谴责中国以间谍罪名将资深记者董郁玉判刑(声明全文)](/articles/voa/1010674.md)
-
-11-30 [立陶宛驱逐三名中国外交官](/articles/voa/1010675.md)
 
