--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-12 [“杀掉寄生虫”：美医保公司CEO被杀案嫌犯动机曝光](/articles/nyt/1042116.md)
+
 12-12 [女性主义电影《好东西》为何能在中国大获成功](/articles/nyt/1042117.md)
 
 12-12 [iPhone为何中国制造？](/articles/nyt/1042118.md)
@@ -598,6 +600,4 @@
 9-4 [拜登首席气候外交官波德斯塔访华](/articles/nyt/1042414.md)
 
 9-4 [万物皆可疑？一份中国国安部眼中的不完整威胁清单](/articles/nyt/1042415.md)
-
-9-3 [石油大于国际法？蒙古无视国际逮捕令欢迎普京](/articles/nyt/1042416.md)
 
