--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-12 [路透社：台湾官员访问美国，与特朗普过渡团队有关人士低调会面](/articles/voa/1010372.md)
+
 12-12 [面对戒严弹劾和调查 尹锡悦誓言要对抗到底](/articles/voa/1010373.md)
 
 12-12 [联合国法院气候审理结果或引发针对中国碳排放的国际法律诉讼](/articles/voa/1010374.md)
@@ -598,6 +600,4 @@
 11-30 [中国表示“愿意同相关国家合作”查明海缆被切断事件](/articles/voa/1010670.md)
 
 11-30 [中国过剩商品涌入巴基斯坦 给当地市场和产业造成巨大压力](/articles/voa/1010671.md)
-
-11-30 [乌克兰敦促北约下周发出入盟邀请](/articles/voa/1010672.md)
 
