--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-12 [古老板的老巢｜连出昏招！广州怎么了？](/articles/cdt/334688.md)
+
 12-12 [【年终专题】“13条生命换不来1条热搜”……2024年度“每日一语”](/articles/cdt/334693.md)
 
 12-12 [Lola｜历史的唯一出口](/articles/cdt/334694.md)
@@ -598,6 +600,4 @@
 11-4 [劳务宏观笔记｜每天工作6小时23分？这数据能信吗？](/articles/cdt/335746.md)
 
 11-4 [鱼眼观察｜闹剧终于收场，真相依然是奢侈品](/articles/cdt/335748.md)
-
-11-5 [【404文库】卖杏花｜不要骂姜萍，是你活该](/articles/cdt/335749.md)
 
