--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+12-12 [消息人士：台湾高级官员与特朗普过渡团队举行会见](/articles/dw/1023417.md)
+
+12-12 [威尼斯龙舟赛与马可波罗](/articles/dw/1023418.md)
+
 12-12 [美国将对中国光伏产品提高关税至50%](/articles/dw/1023419.md)
 
 12-12 [美媒：特朗普邀请习近平参加他的总统就职典礼](/articles/dw/1023420.md)
@@ -596,8 +600,4 @@
 11-13 [为促生育 俄罗斯立法禁止宣传不生孩子](/articles/dw/1023715.md)
 
 11-13 [德国政府专机又双叒叕出故障：经济部长被困里斯本](/articles/dw/1023716.md)
-
-11-13 [被征召上战场的乌克兰囚犯](/articles/dw/1023717.md)
-
-11-13 [珠海血腥撞人事件后：清理悼念花束、网络信息审查](/articles/dw/1023718.md)
 
