--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-12 [2025年1月1日起罗马尼亚和保加利亚全面加入申根区](/articles/dw/1023416.md)
+
 12-12 [消息人士：台湾高级官员与特朗普过渡团队举行会见](/articles/dw/1023417.md)
 
 12-12 [威尼斯龙舟赛与马可波罗](/articles/dw/1023418.md)
@@ -598,6 +600,4 @@
 11-13 [欧盟需要担心与美国的贸易战吗？](/articles/dw/1023714.md)
 
 11-13 [为促生育 俄罗斯立法禁止宣传不生孩子](/articles/dw/1023715.md)
-
-11-13 [德国政府专机又双叒叕出故障：经济部长被困里斯本](/articles/dw/1023716.md)
 
