--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+12-13 [中共经济工作会议定调“适度宽松”：能否带动内外经济循环仍存疑](/articles/voa/1010365.md)
+
+12-13 [美国决定大幅提升产自中国的太阳能硅晶圆、多晶硅和金属钨的进口关税](/articles/voa/1010366.md)
+
+12-13 [特朗普提名前新闻主播卡丽·莱克出任美国之音台长](/articles/voa/1010367.md)
+
+12-13 [拜登作出单日最大规模宽大处理，约1500人获减刑、39人获赦免](/articles/voa/1010368.md)
+
 12-12 [美国在台协会：中国扩大环台军事活动规模并非针对赖清德过境美国](/articles/voa/1010369.md)
 
 12-12 [黑白颠倒：香港前立法会议员及六名721元朗白衣人施暴事件的遇袭者被裁定参与“暴动”](/articles/voa/1010370.md)
@@ -592,12 +600,4 @@
 11-30 [墨西哥当局突击查抄首都“义乌城”并誓言在全国打击假冒产品](/articles/voa/1010663.md)
 
 11-30 [加拿大总理特鲁多抵达佛罗里达州会晤当选总统特朗普](/articles/voa/1010664.md)
-
-11-30 [国际原子能机构：伊朗将开始使用数千台先进离心机进行铀浓缩](/articles/voa/1010665.md)
-
-11-30 [美国总统首次：拜登即将对安哥拉进行历史性访问，并首先在佛得角停留](/articles/voa/1010666.md)
-
-11-30 [美加芬“破冰船合作努力”应对俄中日益增长的威胁](/articles/voa/1010667.md)
-
-11-30 [加沙粮食危机恶化,两名少女和一名妇女在面饼店外被挤压致死](/articles/voa/1010668.md)
 
