--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-13 [内塔尼亚胡称以军将留在戈兰高地缓冲区直至得到安全保障](/articles/voa/1010364.md)
+
 12-13 [中共经济工作会议定调“适度宽松”：能否带动内外经济循环仍存疑](/articles/voa/1010365.md)
 
 12-13 [美国决定大幅提升产自中国的太阳能硅晶圆、多晶硅和金属钨的进口关税](/articles/voa/1010366.md)
@@ -598,6 +600,4 @@
 11-30 [以色列僵局难解 沙特放弃寻求与美国达成防御条约](/articles/voa/1010662.md)
 
 11-30 [墨西哥当局突击查抄首都“义乌城”并誓言在全国打击假冒产品](/articles/voa/1010663.md)
-
-11-30 [加拿大总理特鲁多抵达佛罗里达州会晤当选总统特朗普](/articles/voa/1010664.md)
 
