--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-13 [拜登发布备忘录，成立跨机构工作组，监测和处理中国对美国人员的审查与恐吓](/articles/voa/1010357.md)
+
+12-13 [台籍网红“卧底”拍摄中共统战手段 学者：罕见取得直接证据](/articles/voa/1010358.md)
+
 12-13 [当选总统团队证实：特朗普邀请习近平等世界领导人出席总统就职典礼](/articles/voa/1010359.md)
 
 12-13 [美国起诉14名为设在中俄的公司工作的朝鲜公民，指控其多年行骗为平壤创收](/articles/voa/1010360.md)
@@ -596,8 +600,4 @@
 12-1 [叙利亚政府军蒙受重大挫败：反政府武装已进入叙北部最大城市阿勒颇](/articles/voa/1010655.md)
 
 11-30 [亲欧盟格鲁吉亚民众抗议示威持续，当局称又逮捕100多名示威者](/articles/voa/1010656.md)
-
-11-30 [赖清德启程出访，强调台湾是促进全球和平稳定的关键力量](/articles/voa/1010657.md)
-
-11-30 [许良英的幻想与挣扎：从迷信毛泽东共产党到回归爱因斯坦](/articles/voa/1010658.md)
 
