--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-13 [中国政府承诺推出更多刺激措施提振疲软经济](/articles/nyt/1042114.md)
+
 12-12 [他们买特斯拉，但贴上“反马斯克”贴纸](/articles/nyt/1042115.md)
 
 12-12 [“杀掉寄生虫”：美医保公司CEO被杀案嫌犯动机曝光](/articles/nyt/1042116.md)
@@ -598,6 +600,4 @@
 9-4 [不要妖魔化“川粉”](/articles/nyt/1042412.md)
 
 9-4 [前纽约州长助理被控为中国政府谋取利益](/articles/nyt/1042413.md)
-
-9-4 [拜登首席气候外交官波德斯塔访华](/articles/nyt/1042414.md)
 
