--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-13 [釋出積極信號 中國明年有望擺脫經濟委靡？](/articles/dw/1023411.md)
+
 12-13 [專訪：首爾領袖換人當 美日韓同盟添不確定性](/articles/dw/1023412.md)
 
 12-13 [叙利亚驻莫斯科使馆升起反对派旗帜](/articles/dw/1023413.md)
@@ -598,6 +600,4 @@
 11-14 [客座评论：特朗普会成为美国版普京吗？](/articles/dw/1023709.md)
 
 11-14 [这一次，中国还能应对特朗普的关税战吗？](/articles/dw/1023710.md)
-
-11-14 [川普回歸前最後的拜習會 美中打算談什麼？](/articles/dw/1023711.md)
 
