--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-13 [中国商船涉嫌切断海底电缆，数周后仍被扣留](/articles/nyt/1042112.md)
+
 12-13 [《纽约时报》2024年度十大好书](/articles/nyt/1042113.md)
 
 12-13 [中国政府承诺推出更多刺激措施提振疲软经济](/articles/nyt/1042114.md)
@@ -598,6 +600,4 @@
 9-5 [日本告别超低房贷利率时代](/articles/nyt/1042410.md)
 
 9-5 [当虚假信息和阴谋论开始在左派中流传](/articles/nyt/1042411.md)
-
-9-4 [不要妖魔化“川粉”](/articles/nyt/1042412.md)
 
