--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-13 [美防长：持续注意解放军在台海行动，将竭力助台取得自卫能力](/articles/voa/1010350.md)
+
 12-13 [美国宣布向乌克兰提供5亿美元新军援](/articles/voa/1010351.md)
 
 12-13 [北约秘书长：俄罗斯准备与乌克兰和欧洲进行长期对抗](/articles/voa/1010352.md)
@@ -598,6 +600,4 @@
 12-1 [活动人士：墨西哥驱散两支前往美国的移民队伍](/articles/voa/1010648.md)
 
 12-1 [“我们没有忘记你们”：伦敦集会声援香港45名被囚民主人士](/articles/voa/1010649.md)
-
-12-1 [欧洲议会通过动议呼吁取消香港优惠关税待遇 审视经贸办地位 分析指执行难度高](/articles/voa/1010650.md)
 
