--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-13 [“人间蒸发”的七个月：枪杀CEO嫌犯作案前经历了什么](/articles/nyt/1042111.md)
+
 12-13 [中国商船涉嫌切断海底电缆，数周后仍被扣留](/articles/nyt/1042112.md)
 
 12-13 [《纽约时报》2024年度十大好书](/articles/nyt/1042113.md)
@@ -598,6 +600,4 @@
 9-5 [盐水鸭、名牌、百万报酬：孙雯“中国代理人”案细节曝光](/articles/nyt/1042409.md)
 
 9-5 [日本告别超低房贷利率时代](/articles/nyt/1042410.md)
-
-9-5 [当虚假信息和阴谋论开始在左派中流传](/articles/nyt/1042411.md)
 
