--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-13 [中国回应在台湾周边大规模军演 称打独促统“不会缺席”](/articles/voa/1010348.md)
+
+12-13 [中国男足前主帅李铁涉贪判刑20年 国家体育总局原局长苟仲文被“双开＂](/articles/voa/1010349.md)
+
 12-13 [美防长：持续注意解放军在台海行动，将竭力助台取得自卫能力](/articles/voa/1010350.md)
 
 12-13 [美国宣布向乌克兰提供5亿美元新军援](/articles/voa/1010351.md)
@@ -596,8 +600,4 @@
 12-1 [台湾总统抵达夏威夷，开始对南太平洋进行访问](/articles/voa/1010646.md)
 
 12-1 [消息来源称 当选总统特朗普寻求匈牙利总理欧尔班对乌克兰战争的看法](/articles/voa/1010647.md)
-
-12-1 [活动人士：墨西哥驱散两支前往美国的移民队伍](/articles/voa/1010648.md)
-
-12-1 [“我们没有忘记你们”：伦敦集会声援香港45名被囚民主人士](/articles/voa/1010649.md)
 
