--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-13 [每日一语 2024.12.11](/articles/cdt/334640.md)
+
 12-13 [极昼工作室｜走出风暴，她们这样回答](/articles/cdt/334653.md)
 
 12-13 [木白文笔平平｜山西女硕士事件持续发酵，当地妇联也睡醒了](/articles/cdt/334656.md)
@@ -598,6 +600,4 @@
 11-6 [观人随笔｜你们把学校当什么了？](/articles/cdt/335723.md)
 
 11-6 [星球商业评论｜捕鱼也别用绝户网](/articles/cdt/335725.md)
-
-11-5 [【图说天朝】转发“大陆游客在台北市政府餐厅用餐”被禁言15天](/articles/cdt/335729.md)
 
