--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-13 [七国集团将举行会议讨论叙利亚 支持“包容性”政治过渡](/articles/voa/1010345.md)
+
+12-13 [NGO指控使用新疆棉 英国监管机构严查Shein申请IPO](/articles/voa/1010346.md)
+
 12-13 [安德鲁王子的中国伙伴被控是间谍 英国禁止他入境](/articles/voa/1010347.md)
 
 12-13 [中国回应在台湾周边大规模军演 称打独促统“不会缺席”](/articles/voa/1010348.md)
@@ -596,8 +600,4 @@
 12-1 [叙利亚反对派控制阿勒颇后持续推进 俄罗斯发动袭击支持阿萨德](/articles/voa/1010643.md)
 
 12-1 [台湾总统赖清德过境夏威夷 参访急难管理署与亚利桑那战舰](/articles/voa/1010644.md)
-
-12-1 [特朗普拟提名忠实盟友卡什·帕特尔出任FBI局长](/articles/voa/1010645.md)
-
-12-1 [台湾总统抵达夏威夷，开始对南太平洋进行访问](/articles/voa/1010646.md)
 
