--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-13 [達爾文港中資營運商陷入危機 澳洲政府將收回港口？](/articles/dw/1023408.md)
+
+12-13 [美媒：习近平不会亲自出席特朗普就职典礼](/articles/dw/1023409.md)
+
+12-13 [流行音乐助攻！韩国“K-POP风格”抗议](/articles/dw/1023410.md)
+
 12-13 [釋出積極信號 中國明年有望擺脫經濟委靡？](/articles/dw/1023411.md)
 
 12-13 [專訪：首爾領袖換人當 美日韓同盟添不確定性](/articles/dw/1023412.md)
@@ -594,10 +600,4 @@
 11-14 [北京黑名单上的卢比奥提名国务卿 如何影响双边关系](/articles/dw/1023706.md)
 
 11-14 [北京黑名单上的卢比奥获提名国务卿 将如何影响双边关系](/articles/dw/1023707.md)
-
-11-14 [00后女孩代孕流产 黑产链再引伦理热议](/articles/dw/1023708.md)
-
-11-14 [客座评论：特朗普会成为美国版普京吗？](/articles/dw/1023709.md)
-
-11-14 [这一次，中国还能应对特朗普的关税战吗？](/articles/dw/1023710.md)
 
