--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-13 [现实的模样｜众多校长被查，教育的问题能改变吗？](/articles/cdt/334632.md)
+
+12-13 [老干体v｜离林毅夫打包票的「高收入国家」只剩19天了……](/articles/cdt/334635.md)
+
 12-13 [【404文库】美国驻华大使馆｜伯恩斯大使2024年人权日声明](/articles/cdt/334638.md)
 
 12-13 [每日一语 2024.12.11](/articles/cdt/334640.md)
@@ -596,8 +600,4 @@
 11-6 [每日一语 2024.11.5](/articles/cdt/335717.md)
 
 11-6 [七叔东山再起｜只刺激不改革，解决不了问题](/articles/cdt/335719.md)
-
-11-6 [天涯行路｜劣币驱逐完良币，我们身边还剩下些什么币？](/articles/cdt/335721.md)
-
-11-6 [观人随笔｜你们把学校当什么了？](/articles/cdt/335723.md)
 
