--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-13 [黔驴技穷？专家：中国借调查英伟达反击美芯片管制效用恐有限](/articles/voa/1010342.md)
+
+12-13 [专家：习近平不大可能出席特朗普就职典礼，因为风险大怕被耍](/articles/voa/1010343.md)
+
 12-13 [美中《科技合作协定》修订后签署 效期延长五年](/articles/voa/1010344.md)
 
 12-13 [七国集团将举行会议讨论叙利亚 支持“包容性”政治过渡](/articles/voa/1010345.md)
@@ -596,8 +600,4 @@
 12-2 [欧盟高级官员上任首日突访基辅，展示对乌克兰坚定支持](/articles/voa/1010640.md)
 
 12-1 [拜登总统启程访问非洲，努力抗衡中国影响力](/articles/voa/1010641.md)
-
-12-1 [台湾总统过境美国之际，美日菲拟连手防止中国趁机扰台](/articles/voa/1010642.md)
-
-12-1 [叙利亚反对派控制阿勒颇后持续推进 俄罗斯发动袭击支持阿萨德](/articles/voa/1010643.md)
 
