--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+12-14 [美国如何化解中国对关键矿产实施的禁运令？](/articles/voa/1010337.md)
+
+12-14 [路透揭秘：阿萨德逃离叙利亚前陷入绝望大施骗术](/articles/voa/1010338.md)
+
+12-14 [严冬时节，俄军对乌克兰多地能源设施发动大规模袭击](/articles/voa/1010339.md)
+
 12-13 [中国强化18岁兵役登记宣传 专家：警告效应有限，激励措施更显不足](/articles/voa/1010340.md)
 
 12-13 [面对关税大棒，北京加大筹码，迫使特朗普走向谈判桌](/articles/voa/1010341.md)
@@ -594,10 +600,4 @@
 12-2 [一年两针就能帮助治愈艾滋病 但这种疫苗每个需要的人都能获得吗？](/articles/voa/1010635.md)
 
 12-2 [美国安全官员：以哈停火目前“更有可能”](/articles/voa/1010636.md)
-
-12-2 [白宫国家安全顾问沙利文:美国不会将核武器还给乌克兰](/articles/voa/1010637.md)
-
-12-2 [叙利亚政府军反攻，试图阻止反对派武装继续推进](/articles/voa/1010638.md)
-
-12-2 [“西方买单中国污染” 中国是否能在特朗普时代主导全球气候议题？](/articles/voa/1010639.md)
 
