--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-14 [美议员与官员：中国制无人机对美国国家安全构成威胁](/articles/voa/1010335.md)
+
+12-14 [韩国反对党领袖呼吁执政党支持弹劾动议，周六表决可能性增加](/articles/voa/1010336.md)
+
 12-14 [美国如何化解中国对关键矿产实施的禁运令？](/articles/voa/1010337.md)
 
 12-14 [路透揭秘：阿萨德逃离叙利亚前陷入绝望大施骗术](/articles/voa/1010338.md)
@@ -596,8 +600,4 @@
 12-2 [马哈蒂尔抱怨马来西亚购物中心华文招牌泛滥引发激烈争议](/articles/voa/1010633.md)
 
 12-2 [联合国最高法院将审理气候变化的里程碑案件](/articles/voa/1010634.md)
-
-12-2 [一年两针就能帮助治愈艾滋病 但这种疫苗每个需要的人都能获得吗？](/articles/voa/1010635.md)
-
-12-2 [美国安全官员：以哈停火目前“更有可能”](/articles/voa/1010636.md)
 
