--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-14 [韩戒严风波未平 美日韩对抗中俄朝之东亚战略遭挑战](/articles/voa/1010332.md)
+
+12-14 [中国政府拆除热比娅大厦，清除知名维吾尔异见人士的遗产](/articles/voa/1010333.md)
+
 12-14 [马克龙任命中间派政坛老手弗朗索瓦·贝鲁为法国新总理](/articles/voa/1010334.md)
 
 12-14 [美议员与官员：中国制无人机对美国国家安全构成威胁](/articles/voa/1010335.md)
@@ -596,8 +600,4 @@
 12-2 [尽管曾誓言不会，拜登在卸任前仍赦免了其子亨特](/articles/voa/1010630.md)
 
 12-2 [拜登纪念世界艾滋病日 白宫草坪上展示艾滋病纪念被](/articles/voa/1010631.md)
-
-12-2 [台湾总统在中国谴责的访问中会晤夏威夷州长等人](/articles/voa/1010632.md)
-
-12-2 [马哈蒂尔抱怨马来西亚购物中心华文招牌泛滥引发激烈争议](/articles/voa/1010633.md)
 
