--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-14 [特朗普的个性化、非传统外交对北京是否会奏效？](/articles/voa/1010330.md)
+
+12-14 [当地媒体：俄军逼近一座乌东重镇](/articles/voa/1010331.md)
+
 12-14 [韩戒严风波未平 美日韩对抗中俄朝之东亚战略遭挑战](/articles/voa/1010332.md)
 
 12-14 [中国政府拆除热比娅大厦，清除知名维吾尔异见人士的遗产](/articles/voa/1010333.md)
@@ -596,8 +600,4 @@
 12-2 [战争与地区冲突不断 全球100强军火商销售量提升](/articles/voa/1010628.md)
 
 12-2 [总理无视美国谴责之际 抗议活动在格鲁吉亚全国蔓延](/articles/voa/1010629.md)
-
-12-2 [尽管曾誓言不会，拜登在卸任前仍赦免了其子亨特](/articles/voa/1010630.md)
-
-12-2 [拜登纪念世界艾滋病日 白宫草坪上展示艾滋病纪念被](/articles/voa/1010631.md)
 
