--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-14 [自由娜拉｜行动倡议：呼吁彻查山西精障女硕士被“收留”十五年事件——“五问”山西政府公安部门](/articles/cdt/334609.md)
+
 12-14 [每日一语 2024.12.13](/articles/cdt/334613.md)
 
 12-14 [每日一语 2024.12.12](/articles/cdt/334615.md)
@@ -598,6 +600,4 @@
 11-8 [【404文库】“他们扮的是‘鬼’，但他们只想活得像人！”（外二篇）](/articles/cdt/335703.md)
 
 11-6 [人物｜被余华英拐卖的17个孩子，和那些停在原地的家庭](/articles/cdt/335708.md)
-
-11-6 [鱼眼观察｜电动车新国标难得民心，终于有人重磅发声了！](/articles/cdt/335711.md)
 
