--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-14 [美参议员要求对中国“污水大蒜”启动301调查 中方反讥美政客“贻笑大方”](/articles/voa/1010320.md)
+
 12-14 [国内政局动荡使韩国在印太地区的角色充满不确定性](/articles/voa/1010321.md)
 
 12-14 [以色列空袭加沙 导致至少30人丧生](/articles/voa/1010322.md)
@@ -598,6 +600,4 @@
 12-3 [中国与欧盟贸易关系紧张之际，制药巨头赛诺菲宣布在中国最大投资协议](/articles/voa/1010618.md)
 
 12-3 [中国“卫生巾之乱” 消费者信任度崩跌引发“全民测评”](/articles/voa/1010619.md)
-
-12-3 [古巴革命领导人劳尔·卡斯特罗、古巴国家主席迪亚斯-卡内尔会见中国国务委员王小洪](/articles/voa/1010620.md)
 
