--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-14 [阿萨德政权垮台後首个祷告日 叙利亚民众欢腾庆祝](/articles/voa/1010319.md)
+
 12-14 [美参议员要求对中国“污水大蒜”启动301调查 中方反讥美政客“贻笑大方”](/articles/voa/1010320.md)
 
 12-14 [国内政局动荡使韩国在印太地区的角色充满不确定性](/articles/voa/1010321.md)
@@ -598,6 +600,4 @@
 12-3 [美国：若再发生错误拘押美国公民事件，有关中国的旅行警告可能重新上调](/articles/voa/1010617.md)
 
 12-3 [中国与欧盟贸易关系紧张之际，制药巨头赛诺菲宣布在中国最大投资协议](/articles/voa/1010618.md)
-
-12-3 [中国“卫生巾之乱” 消费者信任度崩跌引发“全民测评”](/articles/voa/1010619.md)
 
