--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-14 [【CDT关注】波士顿书评｜访谈王柯：近代日本民族主义的流变及镜鉴](/articles/cdt/334604.md)
+
 12-14 [自由娜拉｜高举“强奸”轻放“拐卖”？追问和顺县初次调查通报——请和顺县联合调查组明确公开解释女村民郭某的角色](/articles/cdt/334606.md)
 
 12-14 [自由娜拉｜行动倡议：呼吁彻查山西精障女硕士被“收留”十五年事件——“五问”山西政府公安部门](/articles/cdt/334609.md)
@@ -598,6 +600,4 @@
 11-7 [老萧杂说｜这个靠抓“软肋”出名的街道，又对居民放刁撒泼](/articles/cdt/335698.md)
 
 11-7 [南方周末｜她们想知道，究竟是谁在生二孩？](/articles/cdt/335702.md)
-
-11-8 [【404文库】“他们扮的是‘鬼’，但他们只想活得像人！”（外二篇）](/articles/cdt/335703.md)
 
