--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-14 [软外交抗衡中国影响力 巴布亚新几内亚加入澳大利亚橄榄球联赛](/articles/voa/1010317.md)
+
+12-14 [台湾一贯道信徒在中国被逮 台湾海基会吁台北市长蒋万安在双城论坛表达关切](/articles/voa/1010318.md)
+
 12-14 [阿萨德政权垮台後首个祷告日 叙利亚民众欢腾庆祝](/articles/voa/1010319.md)
 
 12-14 [美参议员要求对中国“污水大蒜”启动301调查 中方反讥美政客“贻笑大方”](/articles/voa/1010320.md)
@@ -596,8 +600,4 @@
 12-3 [以色列-真主党停火基本维持，但一些战斗仍在继续](/articles/voa/1010615.md)
 
 12-3 [马来西亚犯罪率飙升，中国免签政策成关注焦点](/articles/voa/1010616.md)
-
-12-3 [美国：若再发生错误拘押美国公民事件，有关中国的旅行警告可能重新上调](/articles/voa/1010617.md)
-
-12-3 [中国与欧盟贸易关系紧张之际，制药巨头赛诺菲宣布在中国最大投资协议](/articles/voa/1010618.md)
 
