--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-15 [一旦权在手便把令来行，代总统韩德洙下令军方加强安全警戒](/articles/voa/1010310.md)
+
 12-15 [部分驻日美军依美日协议开始离开冲绳基地迁往关岛](/articles/voa/1010311.md)
 
 12-14 [专访冯崇义：中澳关系是怎样从热络走向隔阂的？](/articles/voa/1010312.md)
@@ -598,6 +600,4 @@
 12-3 [专家：美国最新对华半导体制裁可能会真正损害中国打造世界级国内芯片制造业的努力](/articles/voa/1010608.md)
 
 12-3 [美批准最新一批对台军售，美商界称有助应对中国灰色骚扰](/articles/voa/1010609.md)
-
-12-3 [经两年调查后，美议员支持新冠病毒由中国实验室泄露的理论](/articles/voa/1010610.md)
 
