--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-15 [每日一语 2024.12.14](/articles/cdt/334576.md)
+
+12-15 [【网络民议】惊叹于韩国新闻工作者的团结与魄力 也苦笑于我们没有如此精神 声音已被消失](/articles/cdt/334580.md)
+
 12-14 [天使望故乡｜在德国，打开另一种生活的可能性](/articles/cdt/334585.md)
 
 12-14 [看世界｜苏联卫生纸简史](/articles/cdt/334587.md)
@@ -596,8 +600,4 @@
 11-8 [张3丰的世界｜更清晰了：传统新闻业正在解体](/articles/cdt/335683.md)
 
 11-8 [三表龙门阵｜瑞士卷：如何与黄色新闻共处](/articles/cdt/335685.md)
-
-11-8 [押沙龙yashl｜关于特朗普说几句](/articles/cdt/335687.md)
-
-11-7 [每日一语 2024.11.6](/articles/cdt/335692.md)
 
