--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-15 [佩洛西在德国美军医院做髋关节置换手术](/articles/voa/1010305.md)
+
 12-15 [特朗普任命真相社交首席执行官努涅斯领导白宫情报委员会](/articles/voa/1010306.md)
 
 12-15 [泽连斯基：俄罗斯“在库尔斯克使用朝鲜军人”](/articles/voa/1010307.md)
@@ -598,6 +600,4 @@
 12-3 [特朗普周末将出席巴黎圣母院重开仪式](/articles/voa/1010603.md)
 
 12-3 [拜登寻求额外240亿美元拨款支持乌克兰、补充美国武器库存](/articles/voa/1010604.md)
-
-12-3 [特朗普关税威胁引发加拿大和墨西哥在边境安全问题上的分歧](/articles/voa/1010605.md)
 
