--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-15 [美联储预计在拜登任内最后一次会议降息](/articles/voa/1010300.md)
+
 12-15 [美联储预计在拜登任内最后一次会议降息](/articles/voa/1010301.md)
 
 12-15 [韩国代理总统与拜登通话 强调两国同盟牢不可摧](/articles/voa/1010302.md)
@@ -598,6 +600,4 @@
 12-3 [法塔赫与哈马斯达成协议组建战后加沙管理机构](/articles/voa/1010598.md)
 
 12-3 [报复美国限制半导体对华出口新举措，北京禁止对美出口关键稀有矿物质](/articles/voa/1010599.md)
-
-12-3 [北约外长会议聚焦在对乌克兰的支持](/articles/voa/1010600.md)
 
