--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-16 [即将上任的国家安全顾问要求解释美国无人机的目击事件](/articles/voa/1010283.md)
+
+12-16 [由于因加沙产生的紧张关系，以色列将关闭驻爱尔兰大使馆](/articles/voa/1010284.md)
+
 12-16 [朝鲜媒体报道韩国总统尹锡悦被弹劾](/articles/voa/1010285.md)
 
 12-16 [教宗方济各首次访问法属科西嘉岛](/articles/voa/1010286.md)
@@ -596,8 +600,4 @@
 12-4 [老挝欠中国巨额债务导致通胀飙升](/articles/voa/1010581.md)
 
 12-4 [中国黑客袭击事件后，美国政府与澳加新联合发布加强网络安全指南](/articles/voa/1010582.md)
-
-12-4 [西方推动向乌克兰提供更多军援，而非北约入盟邀请](/articles/voa/1010583.md)
-
-12-4 [获拜登总统全面赦免后,亨特·拜登枪支案被法官撤销](/articles/voa/1010584.md)
 
