--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-16 [旧闻评论｜一篇消失了的宣传稿](/articles/cdt/334543.md)
+
+12-16 [【404文库】北京市千千律师事务所｜671份判决书告诉你，收买被拐妇女儿童怎么判](/articles/cdt/334545.md)
+
+12-16 [每日一语 2024.12.15](/articles/cdt/334547.md)
+
 12-16 [往事与随想｜你指望卜小花在低福利的石叠村能得到什么？](/articles/cdt/334550.md)
 
 12-16 [【CDT报告汇】ATMOS：气候活动家对新疆太阳能电厂赞不绝口却对维吾尔人权问题视而不见（外二篇）](/articles/cdt/334560.md)
@@ -594,10 +600,4 @@
 11-9 [每日一语 2024.11.8](/articles/cdt/335657.md)
 
 11-9 [竹不倒｜有一种惩罚，叫只对普通人有效！](/articles/cdt/335659.md)
-
-11-9 [【404文库】法度Law｜李佩霞案开庭，家属委托的律师一个都没进去](/articles/cdt/335663.md)
-
-11-9 [每日一语 2024.11.7](/articles/cdt/335666.md)
-
-11-9 [【404文库】衣者褚｜难道李佩霞案幕后还有更耸人听闻的事？](/articles/cdt/335672.md)
 
