--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [泽连斯基宣布拟提供叙利亚粮食援助](/articles/voa/1010282.md)
+
 12-16 [即将上任的国家安全顾问要求解释美国无人机的目击事件](/articles/voa/1010283.md)
 
 12-16 [由于因加沙产生的紧张关系，以色列将关闭驻爱尔兰大使馆](/articles/voa/1010284.md)
@@ -598,6 +600,4 @@
 12-4 [美军在叙利亚进行“自卫”打击](/articles/voa/1010580.md)
 
 12-4 [老挝欠中国巨额债务导致通胀飙升](/articles/voa/1010581.md)
-
-12-4 [中国黑客袭击事件后，美国政府与澳加新联合发布加强网络安全指南](/articles/voa/1010582.md)
 
