--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-16 [韩国宪法法院开始审核尹锡悦弹劾案](/articles/voa/1010279.md)
+
 12-16 [习近平新号召：“刀刃向内”消灭腐败](/articles/voa/1010280.md)
 
 12-16 [联合国将召集专家 试图解决利比亚政治僵局](/articles/voa/1010281.md)
@@ -598,6 +600,4 @@
 12-4 [拜登卸任前重拳出击中国AI软肋 特朗普对中国的科技封控或更强硬](/articles/voa/1010577.md)
 
 12-4 [台湾总统赖清德访问太平洋盟友图瓦卢](/articles/voa/1010578.md)
-
-12-4 [韩国戒严令或导致朝鲜误判而妄动的风险上升](/articles/voa/1010579.md)
 
