--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-16 [38辆美制主战坦克抵台 中国强烈反对](/articles/dw/1023377.md)
+
 12-15 [墙外文摘：中国经济为什么再也搞不起来了？](/articles/dw/1023378.md)
 
 12-15 [申根40周年之际 欧洲国家边境管制成常态](/articles/dw/1023379.md)
@@ -598,6 +600,4 @@
 11-17 [最后一场拜习会 中美领导人在秘鲁会晤](/articles/dw/1023675.md)
 
 11-17 [赴俄罗斯前线的朝鲜士兵会将“幻灭”带回国?](/articles/dw/1023676.md)
-
-11-17 [拜登白宫会见特朗普贺当选 双方握手盼顺利交接](/articles/dw/1023677.md)
 
