--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-17 [常识流通处｜从北到南给树穿毛衣，总觉得有点诡异](/articles/cdt/334497.md)
+
 12-16 [南风窗｜救命钱被卷走，一群白血病人的寒冬](/articles/cdt/334517.md)
 
 12-16 [每日一语 2024.12.16](/articles/cdt/334520.md)
@@ -598,6 +600,4 @@
 11-11 [【404文库】基本常识｜熟悉的操作一秒回归！河南工程学院启用临时出门证](/articles/cdt/335624.md)
 
 11-11 [建设性意见｜大学生，向何处去？](/articles/cdt/335626.md)
-
-11-11 [【CDT报告汇】“大外宣”记者：全球数字平台更多发布自由，但失去了在国内平台享有的特权（外二篇）](/articles/cdt/335634.md)
 
