--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-17 [总理特鲁多面临支持率下滑之际，加拿大财长辞职](/articles/voa/1010263.md)
+
 12-17 [加州男子因经营中国产妇赴美“生育旅游”而被判处41个月监禁](/articles/voa/1010264.md)
 
 12-17 [即将离任的美驻华大使伯恩斯为美中关系留下了什么？](/articles/voa/1010265.md)
@@ -598,6 +600,4 @@
 12-5 [韩国“闪电”戒严或给东亚地缘政治和安全留下长期的阴影？](/articles/voa/1010561.md)
 
 12-5 [特朗普提名纳瓦罗出任贸易与制造业高级顾问](/articles/voa/1010562.md)
-
-12-5 [美国在台协会处长谷立言：中国是台湾与国际互联互通的最大挑战](/articles/voa/1010563.md)
 
