--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-18 [迎习近平来访庆“回归” 澳门加强维安、管控言论](/articles/voa/1010226.md)
+
 12-18 [率团访问中国 台湾前总统马英九：搭建两岸“和平桥梁”](/articles/voa/1010227.md)
 
 12-18 [安大略省省长称特朗普加征关税将是美国市场的灾难](/articles/voa/1010228.md)
@@ -598,6 +600,4 @@
 12-6 [国际特赦称以色列在加沙实施种族灭绝，以色列驳斥其撒谎](/articles/voa/1010524.md)
 
 12-6 [布林肯与拉夫罗夫同场会议针锋相对，指责对方造成乌克兰局势升级](/articles/voa/1010525.md)
-
-12-6 [一名中国外交官因敦促巴拉圭议员抛弃台湾而被驱逐](/articles/voa/1010526.md)
 
