--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-18 [德国企业破产数量创10年来最高](/articles/dw/1023358.md)
+
 12-17 [中国放宽过境免签政策](/articles/dw/1023359.md)
 
 12-17 [什么是噪声？](/articles/dw/1023360.md)
@@ -598,6 +600,4 @@
 11-19 [欧盟的外交政策能否顶撞特朗普？](/articles/dw/1023656.md)
 
 11-19 [G20峰會：習近平走上C位 聯合宣言淪空談?](/articles/dw/1023657.md)
-
-11-19 [乌克兰战争1000天：图解战争后果](/articles/dw/1023658.md)
 
