--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-18 [熊太行｜王文当院长，中国人民大学这几年到底有多差](/articles/cdt/334429.md)
+
 12-18 [每日一语 2024.12.17](/articles/cdt/334461.md)
 
 12-17 [【404文库】人大重阳｜人大学者王宪举问“怎么让女大学生服服帖帖生孩子”](/articles/cdt/334467.md)
@@ -598,6 +600,4 @@
 11-12 [每日一语 2024.11.11](/articles/cdt/335599.md)
 
 11-12 [魏春亮说｜万人夜骑开封，一种新时代的群体性癔症](/articles/cdt/335602.md)
-
-11-12 [仕道｜大跌眼镜！高中学生会干部也开始索贿了…](/articles/cdt/335604.md)
 
