--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+12-18 [习近平飞抵澳门 粤澳提高安保级别](/articles/dw/1023354.md)
+
+12-18 [美国国会将通过进一步限制对华投资案](/articles/dw/1023355.md)
+
+12-18 [没有了美国，北约能生存下去吗？](/articles/dw/1023356.md)
+
 12-18 [德国大选：绿党哈贝克拒绝与选项党魏德尔电视辩论](/articles/dw/1023357.md)
 
 12-18 [德国企业破产数量创10年来最高](/articles/dw/1023358.md)
@@ -594,10 +600,4 @@
 11-19 [媒体：美司法部将施压谷歌出售Chrome](/articles/dw/1023652.md)
 
 11-19 [波罗的海通信电缆断裂 有人搞破坏？](/articles/dw/1023653.md)
-
-11-19 [客座评论：特朗普2.0对中国是否会超级强硬](/articles/dw/1023654.md)
-
-11-19 [英相与习近平谈人权 中方驱离外媒](/articles/dw/1023655.md)
-
-11-19 [欧盟的外交政策能否顶撞特朗普？](/articles/dw/1023656.md)
 
