--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+12-19 [【网络民议】阿强同志｜性少数议题事关民生问题](/articles/cdt/334417.md)
+
 12-18 [【404文库】六神磊磊读金庸｜年轻人已经够老老实实服服帖帖了](/articles/cdt/334419.md)
 
 12-18 [就叫熊太行也行｜我母校人大投诉我了，说我伤害她的商誉](/articles/cdt/334423.md)
@@ -598,6 +600,4 @@
 11-12 [基本常识｜有没有可能，及时化解矛盾的思路就是累积矛盾的源头？](/articles/cdt/335578.md)
 
 11-12 [老萧杂说｜对集体骑行一禁了之，莫如来一场当代版“潘晓讨论”](/articles/cdt/335580.md)
-
-11-12 [匿名网友｜珠海体育中心撞人事件发生后，我的妈妈被推进了重症监护室](/articles/cdt/335584.md)
 
