--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-19 [中情局长伯恩斯在新的卡塔尔会谈中寻求以色列与哈马斯停火](/articles/voa/1010212.md)
+
 12-19 [美国国会通过《2025财年国防授权法》授权3亿美元用于强化台湾安全](/articles/voa/1010213.md)
 
 12-19 [美参院通过新年度《国防授权法》 下一步送交白宫](/articles/voa/1010214.md)
@@ -598,6 +600,4 @@
 12-6 [董军现身上海辟谣? 观察人士：恐因供出苗华罪证而戴罪立功中](/articles/voa/1010510.md)
 
 12-6 [立陶宛总统：波罗的海海底电缆“有相当高的可能性”被人故意割断](/articles/voa/1010511.md)
-
-12-6 [被渗透卖情报给中国 台湾总统府维安宪兵被起诉](/articles/voa/1010512.md)
 
