--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+12-19 [美中军舰柬国对望 三边防务关系将如何演变？](/articles/voa/1010210.md)
+
+12-19 [陈金平对密谋充当中国政府的非法代理人表示认罪](/articles/voa/1010211.md)
+
 12-19 [中情局长伯恩斯在新的卡塔尔会谈中寻求以色列与哈马斯停火](/articles/voa/1010212.md)
 
 12-19 [美国国会通过《2025财年国防授权法》授权3亿美元用于强化台湾安全](/articles/voa/1010213.md)
@@ -596,8 +600,4 @@
 12-7 [中国对关键高科技材料的禁令可能对美国高科技行业及整体经济产生广泛影响](/articles/voa/1010508.md)
 
 12-7 [普金访问白俄罗斯，两国即将签署安保条约](/articles/voa/1010509.md)
-
-12-6 [董军现身上海辟谣? 观察人士：恐因供出苗华罪证而戴罪立功中](/articles/voa/1010510.md)
-
-12-6 [立陶宛总统：波罗的海海底电缆“有相当高的可能性”被人故意割断](/articles/voa/1010511.md)
 
