--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-19 [参院报告：美国遏制中俄获取高级计算机芯片“努力不足”](/articles/voa/1010204.md)
+
 12-19 [美发布中国军力报告 国防部官员：解放军仍不具在可接受代价下侵台能力](/articles/voa/1010205.md)
 
 12-19 [特朗普敦促议员拒绝支出法案，政府停摆风险上升](/articles/voa/1010206.md)
@@ -598,6 +600,4 @@
 12-7 [中国一艘渔船在索马里海域遭劫持，船员目前安全](/articles/voa/1010502.md)
 
 12-7 [罗马尼亚最高法院立场反转，裁定首轮总统大选投票结果无效](/articles/voa/1010503.md)
-
-12-7 [因国安法获刑后提前获释受阻的马俊文司法复核被香港法院驳回](/articles/voa/1010504.md)
 
