--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+12-19 [中美关系需要“马斯克+斯威夫特”](/articles/nyt/1042096.md)
+
 12-19 [中国在纽约警务站负责人承认密谋充当中国政府代理人](/articles/nyt/1042097.md)
 
 12-19 [五角大楼称中国核武器数量仍在强劲增长](/articles/nyt/1042098.md)
@@ -598,6 +600,4 @@
 9-11 [贺锦丽特朗普首次正面交锋：亮点与大选形势变化](/articles/nyt/1042394.md)
 
 9-11 [监管机构试图阻止美国代表参与中国运动员兴奋剂事件讨论](/articles/nyt/1042395.md)
-
-9-11 [华为推出三折叠屏手机Mate XT，售价19999元起](/articles/nyt/1042396.md)
 
