--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+12-19 [德媒：一中国男子拍摄基尔军港被拘](/articles/dw/1023348.md)
+
+12-19 [美国M1A2T坦克抵台 中国外交部：台湾“以武谋独”不可能得逞](/articles/dw/1023349.md)
+
+12-19 [被捕美籍华人承认在曼哈顿设立中国海外警站](/articles/dw/1023350.md)
+
+12-19 [不信任投票也是巩固权力的工具](/articles/dw/1023351.md)
+
 12-19 [德国2月议会大选 各党竞选纲领一次看清](/articles/dw/1023352.md)
 
 12-18 [防范侵台：台湾与亚马逊商谈互联网卫星合作](/articles/dw/1023353.md)
@@ -592,12 +600,4 @@
 11-19 [47人案判刑  劉頴匡女友：今天不是結束，是歷史的中段](/articles/dw/1023646.md)
 
 11-19 [企鹅奇幻漂流记：南极帝企鹅现身澳洲海滩](/articles/dw/1023647.md)
-
-11-19 [电池革命来临！德国初创公司将量产首款固态电池](/articles/dw/1023648.md)
-
-11-19 [马克龙与习近平在G20峰会面晤](/articles/dw/1023649.md)
-
-11-19 [肖尔茨会见习近平：没有人应该生活在对邻国的恐惧中](/articles/dw/1023650.md)
-
-11-19 [莫斯科：乌克兰使用美国的ATACMS导弹袭击俄罗斯](/articles/dw/1023651.md)
 
