--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+12-19 [法国大规模强奸案：51名被告均被判刑](/articles/dw/1023347.md)
+
 12-19 [德媒：一中国男子拍摄基尔军港被拘](/articles/dw/1023348.md)
 
 12-19 [美国M1A2T坦克抵台 中国外交部：台湾“以武谋独”不可能得逞](/articles/dw/1023349.md)
@@ -598,6 +600,4 @@
 11-19 [戴耀廷：颠覆罪被判重刑的法律学者](/articles/dw/1023645.md)
 
 11-19 [47人案判刑  劉頴匡女友：今天不是結束，是歷史的中段](/articles/dw/1023646.md)
-
-11-19 [企鹅奇幻漂流记：南极帝企鹅现身澳洲海滩](/articles/dw/1023647.md)
 
