--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+12-20 [特朗普支持的开支案在众议院未能通过，美国政府关闭时刻逼近](/articles/voa/1010184.md)
+
 12-20 [美国高级官员：巴基斯坦正在开发最终可能打击到美国的导弹](/articles/voa/1010185.md)
 
 12-20 [共和党参议员要求终止《美中科技合作协定》](/articles/voa/1010186.md)
@@ -598,6 +600,4 @@
 12-7 [民调居次 德国极右翼政党将首度提名总理候选人](/articles/voa/1010482.md)
 
 12-7 [莫迪领导的印度人民党指美国国务院资助反印度的记者团体](/articles/voa/1010483.md)
-
-12-7 [睽违5年 巴黎圣母院重新开放 特朗普将出席与马克龙会晤](/articles/voa/1010484.md)
 
